Add MIR changes

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -1,38 +1,38 @@
-The use of catalysts has several advantages, including faster, selective, and more energy-efficient chemical reactions, directes towards producing higher amounts of the desired product while reducing unwanted byproducts \parencite{Schlogl2015}.
+The use of catalysts has several advantages such as faster, selective, and more energy-efficient chemical reactions, directed towards producing higher amounts of the desired product while reducing unwanted byproducts.
 Over the years, scientists have developed specialized catalysts for various real-world applications, today 90\% of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
 Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilizers \parencite{FECHETE20122}.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ParisNO2.png}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ParisNO2English.png}
     \caption{
-        $NO_2$ levels in Paris are on average twice superior to the annual limit of $40 \, \mu g / m^3$ \parencite{AirParis}.
+        $NO_2$ levels in Paris near the main traffic roads are on average twice superior to the annual limit of \qty{40}{\ug \per \m^3} \parencite{AirParis} between 2012 and 2018.
     }
     \label{fig:NO2Paris}
 \end{figure}
 
 Several new challenges have emerged in the field of catalysis related to improving efficiency, reducing environmental impact, and developing sustainable processes.
-First, environmental challenges concern minimizing and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{LUDWIG2017313, Lange2021} and energy supplies.
-Secondly, economical challenges which imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialization \parencite{Keisuke2019, Gunay2021}.
+First, environmental challenges concern minimizing and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{LUDWIG2017, Lange2021} and energy supplies.
+Secondly, economical challenges imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialization \parencite{Keisuke2019, Gunay2021}.
 For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals \parencite{Zhong2021} and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive.
 
 Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
 Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and particles \parencite{WHOAirPollution, GANDHI2003433}.
-Some of the major air pollutants such as nitrogen oxides, ($NO_x$), and particulate matter (PM) are emitted by road traffic (65\% of $NO_x$, $\approx 35\%$ of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
-To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to $NO_2$ concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the WHO recommendations for PM$_{2.5}$ \parencite{AirParis}.
+Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (65\% of \ce{NO_x}, $\approx 35\%$ of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
+To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organization (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
 Air quality is the main environmental concern of Ile-de-France residents (65\% of total mentions) ahead of climate change (63\%) and food (38\% - \cite{AirParis}).
 
 \section{The oxidation of Ammonia}
 
 \subsection{The Haber-Bosch and Ostwald processes}
 
-\epigraph{Today, about 50\% of the worlds population relies on nitrogen-based fertilizer to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
+\epigraph{Today, about 50\% of the world population relies on nitrogen-based fertilizers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
 
-The story of ammonia begins in the early 20th century with the discovery of the Ostwald process in 1902 that permitted the synthesis of fertilizers from ammonia.
+The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilizers from ammonia.
 Wilhelm Ostwald later received the Nobel price in 1909 \textit{"in recognition of his work on catalysis and for his investigations into the fundamental principles governing chemical equilibria and rates of reaction"}.
 Seven years later, in 1909, Fritz Haber designed a process for the synthesis of ammonia which was later improved by Carl Bosch.
 It is today known as the Haber-Bosch process and is at the origin of the mass production of ammonia using metallic catalysts.
-Fritz Haber received the Nobel prize in 1918 \textit{"for the synthesis of ammonia from its elements"} \parencite{Alexander1920} and Carl Bosch in 1931 \textit{“in recognition of their contributions to the invention and development of chemical high pressure methods”}.
+Fritz Haber received the Nobel prize in 1918 \textit{"for the synthesis of ammonia from its elements"} \parencite{Alexander1920} and Carl Bosch in 1931 \textit{“in recognition of his contributions to the invention and development of chemical high pressure methods”}.
 
 \begin{figure}[!htb]
 \centering
@@ -66,8 +66,8 @@ The oxidation of ammonia can be described by three equations that, depending on 
 
 The first equation (eq. \ref{eq:AmmoniaOxidationNitrogen}) yields nitrogen (\nitrogen), a naturally occuring gas that does not pollute the environment nor shows any toxic behavious towards humans (tab. \ref{tab:NitrogenGases}).
 The second equation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}) yields nitrous oxide (\nitrousoxide), a powerful greenhouse effect gas (tab. \ref{tab:NitrogenGases}).
-For an equal amount of \nitrousoxide and \carbondioxide, the amount of \nitrousoxide will trap 298 times (298 Ceq) more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for 6.2\% of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
-The third equation (eq. \ref{eq:AmmoniaOxidationNitricOxide}) yields nitric oxide, also called nitrogen monoxide (\nitricoxide), which is the main desired product for the subsequent production of nitrogen-based fertilizers (tab. \ref{tab:NitrogenGases}) via the synthetization of nitric acid from nitric oxide with the Ostwald process.
+For an equal amount of \nitrousoxide and \carbondioxide, the amount of \nitrousoxide will trap 298 times more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for 6.2\% of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
+The third equation (eq. \ref{eq:AmmoniaOxidationNitricOxide}) yields nitric oxide, also called nitrogen monoxide (\nitricoxide), which is the main desired product for the subsequent production of nitrogen-based fertilizers (tab. \ref{tab:NitrogenGases}) \textit{via} the synthetization of nitric acid with the Ostwald process.
 
 Known side reactions to the oxidation of ammonia are first the recombination of nitric oxide with unreacted ammonia that leads to the production of water and nitrogen (eq. \ref{eq:SideReactions1}), and secondly the thermal decomposition of nitric oxide (eq. \ref{eq:SideReactions2}), that both lower the total yield of the reaction when aiming at the production of nitric oxide.
 
@@ -83,7 +83,7 @@ Reactions \ref{eq:AmmoniaOxidationNitrogen}, \ref{eq:AmmoniaOxidationNitrousOxid
 
 \subsection{The importance of heterogeneous catalysis}
 
-The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the Ostwald process stem from the production of \nitricoxide via the first stage, \textit{i.e.} the oxidation of ammonia (eq. \ref{eq:AmmoniaOxidationNitricOxide}).
+The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the Ostwald process stem from the production of \nitricoxide \textit{via} the first stage, \textit{i.e.} the oxidation of ammonia (eq. \ref{eq:AmmoniaOxidationNitricOxide}).
 
 \begin{align}
     \label{eq:Stage2}
@@ -92,7 +92,7 @@ The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the O
     3 \nitrogendioxide (g) + \water (l) & \rightarrow 2\nitricacid (aq) + \nitricoxide (g)
 \end{align}
 
-Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide and hydrolysed to nitric acid (\nitricacid), an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertlizers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
+Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide which then reacts with water to form nitric acid (\nitricacid), an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertlizers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
 
 \begin{align}
     \label{eq:AmmoniumNitrate}
@@ -102,7 +102,7 @@ Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide and hydrolysed
 Hence, important selectivity towards the production of \nitricoxide must be achieved in the first stage when aiming at the production of fertilizers.
 However, at low temperature or in the absence of catalyst, the production of \nitrogen is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen} - \cite{Hatscher2008}).
 
-Since the 1930s, the presence of a platinum-rhodium ($\approx 10 \% Rh$) knitted gauzes catalyst and favourable reaction conditions (e.g. 900°C - 5 bar - excess \dioxygen) allowed a 98 \nitricoxide \% yield to be achieved \parencite{Handforth1934, Heck1982}.
+Since the 1930s, the presence of a platinum-rhodium ($\approx 10 \% Rh$) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a 98 \nitricoxide \% yield to be achieved \parencite{Handforth1934, Heck1982}.
 The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogenous catalytic process \parencite{Bradley1995,PEREZRAMIREZ2004}.
 The final pathway towards the production of \nitrogen, \nitrousoxide or \nitricoxide depends on the oxygen density and binding on the surface.
 HAVE TO DETAIL MORE HERE
@@ -123,44 +123,53 @@ Approximately half of the production of ammonia is lost to the environment \pare
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/ammonia/NO2pie.pdf}
-    \caption{Pie charts underlining the contribution of nitrogen-based fertilizers to the total U.S.A. greenhouse gases emissions in 2021.
-    Adapted from \cite{EPAGreenhouseGases}.}
+    \caption{
+    Pie charts underlining the importance of different gas in the total US greenhouse gas emissions in 2021 (a) and the specific contribution of nitrogen-based fertilizers to the total \nitrousoxide emissions in 2021.
+    LULUCF means Land Use, Land-Use Change, and Forestry.
+    Adapted from \cite{EPAGreenhouseGases}.
+    }
     \label{fig:PieGreenhouseNO2}
 \end{figure}
 
-Nevertheless, it can also be interresting to be able to remove \ammonia from the atmosphere, a colourless gas with a pungent odour, that irritates the eyes, nose, throat, and respiratory tract if inhaled in small amounts due to its corrosive nature and is poisonous in large quantities.
+Nevertheless, it can also be interesting to be able to remove \ammonia from the atmosphere, a colourless gas with a pungent odour, that irritates the eyes, nose, throat, and respiratory tract if inhaled in small amounts due to its corrosive nature and is poisonous in large quantities.
 Ammonia also pollutes and contributes to the eutrophication and acidification of terrestrial and aquatic ecosystems, and forms secondary particulate matter (PM2.5) when combined with other pollutants in the atmosphere (tab. \ref{tab:NitrogenGases}).
 In that case, the reaction must be tuned towards the production of \nitrogen which is the only non polluant and toxic gas.
 
-Finally, the important effect of nitrogen oxides (NOx, \nitricoxide and \nitrogendioxide) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for 65\% of their emissions.
-The selective catalytic reaction (SCR) with urea has proven to be effective and to remove
+Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \nitricoxide and \nitrogendioxide) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for 65\% of their emissions.
+The selective catalytic reaction (SCR) using urea or ammonia as reductant (tab. \ref{tab:NitrogenGases}) has proven to be effective and to reach 95\% efficiency \parencite{MitsubishiSCR}.
+However, there can be a subsequent problem of unreacted ammonia \textit{sliping} from the reaction, which is also an important subject of study \parencite{Thermofischer}.
 
+Today, the ammonia oxidation is an essential catalytic reaction used in the production of nitrogen-based fertilizers and in environmental applications.
+In both cases, particular focus is on two products of the reaction, namely, \nitricoxide and \nitrogen.
+Depending on the application of the ammonia oxidation, the catalytic reaction must be tuned towards a specific product, this \textit{selectivity} is controlled by the reaction temperature, pressure, the  reactant ratio, and the type of catalyst.
+To be able to drive the reaction, the impact of each parameter \textit{at relevant industrial conditions} on the product pressure must be studied.
+
+\begin{landscape}
 \begin{table}[!htb]
 \centering
-\resizebox{\textwidth}{!}{%
+\resizebox{\columnwidth}{!}{%
     \begin{tabular}{@{}l|l|lll|l|l|ll@{}}
     \toprule
     Formula & \ammonia & \nitrogen & \nitrousoxide & \nitricoxide & \nitrogendioxide & \nitricacid & \ammoniumnitrate & \urea \\
     \midrule
     Name & Ammonia & Nitrogen & \begin{tabular}[c]{@{}l@{}}Nitrous oxide,\\ Laughing gas\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitrogen oxide,\\ Nitric oxide\\ Nitrogen monoxide\end{tabular} & Nitrogen dioxide & Nitric acid & \begin{tabular}[c]{@{}l@{}}Ammonium\\ nitrate\end{tabular} & Urea \\
     Origin & \begin{tabular}[c]{@{}l@{}}Haber-Bosch\\ process\end{tabular} & \begin{tabular}[c]{@{}l@{}}Naturally present\\ in the atmosphere,\\ Ammonia \\ oxidation,\\ Selective catalytic\\ reaction (SCR)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ oxidation,\\ Emissions from\\ nitrogen-based\\ fertilizers\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia oxidation,\\ Anthropogenic sources \\ (combustion process, \\ industry, agriculture, ...)\\ Naturally produced \\ from lightning or\\ volcanoes\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ostwald process (step 1)\\ Anthropogenic sources \\ (combustion process, \\ industry, agriculture, ...)\\ Naturally produced \\ from lightning or \\ volcanoes\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (step 2)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitric acid\\ neutralization \\ with ammonia\end{tabular} & Ammonia \\
-    Major use & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (fertilizers),\\ Direct use in soil,\\ Fuel,\\ Hydrogen \\ carrier,\\ Cooling in liquid\\  form\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ production\end{tabular} & \begin{tabular}[c]{@{}l@{}}Medicine,\\ Propellant\end{tabular} & Production of nitric acid & Production of nitric acid & \begin{tabular}[c]{@{}l@{}}Fertilizer production,\\ Nitration (explosives,\\ dyes, ...),\\ Propellant,\\ Etching\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilizing \\ agent,\\ Explosives\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilizing \\ agent,\\ SCR to reduce\\ NOx into N2\end{tabular} \\
+    Major use & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (fertilizers),\\ Direct use in soil,\\ Fuel,\\ Hydrogen \\ carrier,\\ Cooling, SCR \end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ production\end{tabular} & \begin{tabular}[c]{@{}l@{}}Medicine,\\ Propellant\end{tabular} & Production of nitric acid & Production of nitric acid & \begin{tabular}[c]{@{}l@{}}Fertilizer production,\\ Nitration (explosives,\\ dyes, ...),\\ Propellant,\\ Etching\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilizing \\ agent,\\ Explosives\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilizing \\ agent,\\ SCR to reduce\\ NOx into N2\end{tabular} \\
     Toxicity & \begin{tabular}[c]{@{}l@{}}Dangerous for\\ the environment\\ Toxic, \\ Corrosive\end{tabular} & \begin{tabular}[c]{@{}l@{}}Asphyxiation by\\ displacing O2\end{tabular} & \begin{tabular}[c]{@{}l@{}}Anesthetic, \\ euphoric\end{tabular} & \begin{tabular}[c]{@{}l@{}}Oxidizing, Corrosive,\\ Toxic\end{tabular} & \begin{tabular}[c]{@{}l@{}}Oxidizing, Corrosive,\\ Toxic, Health hazard\end{tabular} & Oxidizing, Corrosive &  &  \\
     Pollution & PM formation &  & \begin{tabular}[c]{@{}l@{}}Ozone\\ depletion\end{tabular} & \begin{tabular}[c]{@{}l@{}}Smog, acid rains, \\ ozone depletion,\\ Precursor to NO2 in\\ the atmosphere\end{tabular} & \begin{tabular}[c]{@{}l@{}}Smog, acid rains, \\ ozone formation\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes towards\\ NO2\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes \\ into NO2 when\\ used as fertilizer,\\ Eutrophication\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes \\ into NH3 when\\ used as fertilizer,\\ Eutrophication\end{tabular} \\
     \begin{tabular}[c]{@{}l@{}}Greenhouse \\ effect\end{tabular} &  &  & \begin{tabular}[c]{@{}l@{}}Very important\\ (298 CO2 eq.)\end{tabular} &  &  &  & \begin{tabular}[c]{@{}l@{}}Nitrogen-based\\ fertilizer release\\ N2O in the \\ atmosphere\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitrogen-based\\ fertilizer release\\ N2O in the \\ atmosphere\end{tabular} \\ \bottomrule
     \end{tabular}%
     }
     \caption{
-        Nitrogen based molecules that are involved in the oxidation of ammonia, the Haber-Bosch process, the Ostwald process or nitrogen-based fertilizers.
-        Information compiled from various sources\parencite{Thiemann2000, HARRISON2001, Baerns2005, Imbihl2007, Hatscher2008, Davidson2009, Resta2020a,Borodin2021,Pottbacker2022}
+        Nitrogen based molecules that are involved in the oxidation of ammonia, \\
+        the Haber-Bosch process, the Ostwald process or nitrogen-based fertilizers.\\
+        Information compiled from various sources: \\
+        \cite{Thiemann2000, HARRISON2001, Baerns2005, Imbihl2007, Hatscher2008}, \\
+        \cite{Davidson2009, Resta2020a,Borodin2021,Pottbacker2022}
     }
     \label{tab:NitrogenGases}
 \end{table}
-
-Today, the ammonia oxidation is an essential catalytic reaction used in the production of nitrogen-based fertilizers and in environmental applications.
-In both cases, particular focus is on two products of the reaction, namely, \nitricoxide and \nitrogen.
-Depending on the application of the ammonia oxidation, the catalytic reaction must be tuned towards a specific product, this \textit{selectivity} is controlled by the reaction temperature, pressure, the  reactant ratio, and the type of catalyst.
-To be able to drive the reaction, the impact of each parameter \textit{at relevant industrial conditions} on the product pressure must be studied.
+\end{landscape}
 
 \section{From industry to model catalysis}
 
@@ -172,13 +181,13 @@ To be able to drive the reaction, the impact of each parameter \textit{at releva
     \toprule
                 & Pressure    & Material                         &     Temperature \\
     \midrule
-    Industry   & 1-12 bar     & Knitted gauzes wires             & 750 - 900°C \\
-               &              & (diameter $\approx 80 \, \mu m$) & \\
+    Industry   & \qtyrange{1}{12}{\bar} & Knitted gauzes wires   & \qtyrange{750}{900}{\degreeCelsius} \\
+               &              & (diameter \qty{\approx 80}{\um}) & \\
     \midrule
-    Literature & UHV, mbar    & Single crystals                  & RT - 900°C \\
+    Literature & UHV, mbar    & Single crystals                  & \qtyrange{25}{900}{\degreeCelsius} \\
     \midrule
-    This study & Near ambient & Single crystals                  & RT - 450°C \\
-               & pressure (0.5 bar)  & and nanoparticles & \\
+    This study & Near ambient & Single crystals                  & \qtyrange{25}{450}{\degreeCelsius} \\
+               & pressure (\qty{0.5}{\bar})  & and nanoparticles & \\
     \bottomrule
     \end{tabular}
     \caption{
@@ -190,51 +199,58 @@ To be able to drive the reaction, the impact of each parameter \textit{at releva
 \end{table}
 
 The size of crystalline samples for x-ray studies is typically limited by the technique if not by the synthetization process.
-For Bragg coherent diffraction imaging (BCDI), the coherent lengths of the instrument, the need to sample the interfringes with the detector (inversely proportional to the crystal size until not visible anymore), and the need for the beam to fully iluminate the particle are most important (sec. \ref{sec:BCDI}).
-The advantage of BCDI is that the sub-micron-scale particles exhibit a various amount of active sites such as clear facets, edges, corners and defects.
+For Bragg coherent diffraction imaging (BCDI), the coherence lengths of the instrument, the need to sample the interfringes with the detector (inversely proportional to the crystal size until not visible anymore), and the need for the beam to fully iluminate the particle are most important (sec. \ref{sec:BCDI}) and translate into an upper limit for the sample size (\qty{\approx 1}{\um}).
+The advantage of the sub-micron-scale 'nano'-particles typically used in BCDI is that they exhibit a various amount of active sites such as clear facets, edges, corners and defects.
 They are thus considered to be a good approximation of real catalysts (cite).
-Moreover, the particle can be imaged in three dimensions that allows the visalization and study of both the surface and bulk structure.
+Moreover, the particle can be imaged in three dimensions, which allows the visalization and study of both the surface and bulk structure.
 
-For surface x-ray diffraction (SXRD) and x-ray photoelectron spectroscopy (XPS), the single-crystal sample is much larger ($\approx 1 cm$) and tends more towards a model sample than to real samples since it only exhibits a single facet on its surface.
-However, this specific shape allows an improved sensitivity to the single facet's surface structure compared to BCDI, by increasing its scattered signal (sec. \ref{sec:SXRD}).
-Following the same line of thought, if working at ambient pressure is not a problem with x-rays that have a long penetration depth, the electrons that escape the probed surface in XPS are quickly absorbed by the atmosphere and a large sample yields increased statistics.
-Nanoparticles are very well suited to BCDI and theoretical studies with dynamical field theory (DFT) or molecular dynamics (MD), limited by the current computationnal power, but are not easily measured experimentally for a simple reason which is that in both diffraction and spectroscopy techniques, the outcoming photon or electron flux is proportionnal to the sample volume (sec. \ref{eq:SXRD}).
+However, samples below a certain size are not easily measured experimentally with other diffraction techniques for a simple reason which is that the outcoming photon flux is proportionnal to the sampled volume (sec. \ref{eq:ScatteredIntensity}).
+This limitation also exists in BCDI, despite the highly focused beam, which draws a limit between experimental samples (the smallest imaged nanoparticle is \qty{60}{\nm} large - \cite{Bjorling2019, Carnis2021}) and the few \unit{\nm} large nanoparticles used in dynamical field theory (DFT) or molecular dynamics (MD), theoretical approaches only limited by the current computationnal power.
 
-Most of the catalytic contribution of the single crystal can be considered to origin from its top surface, whereas in the case of BCDI, the sample is constituted of thousands of particles that all together contribute to the catalytic activity, despite only a few being imaged.
+The single crystal samples used in this thesis for surface x-ray diffraction (SXRD) and x-ray photoelectron spectroscopy (XPS) are much larger (\qty{\approx 1}{\cm}) and tend more towards a model approach since they only exhibit a single facet on their surface.
+The large sample surface area allows an improved sensitivity to the facet surface structure compared to BCDI, by increasing its scattered signal (sec. \ref{sec:SXRD}).
+%Following the same line of thought, if working at ambient pressure is not a problem with x-rays that have a long penetration depth, the electrons that escape the probed surface in XPS are quickly absorbed by the atmosphere.
+%A large sample yields increased statistics.
 
-In the frame of this thesis, the material and pressure gap will be lowered by operating at temperatures after the catalyst light-off at an almost industrial pressure.
-The difference in activity between different crystalline facets for the oxidation of ammonia will be studied with different samples.
+% Most of the catalytic activity of the single crystal can be considered to origin from its top surface, whereas in the case of BCDI, the sample is constituted of thousands of particles that all together contribute to the catalytic activity, despite only a few being imaged.
+
+In the frame of this thesis, the material and pressure gap will be partly bridged by operating at temperatures after the catalyst light-off, at almost industrial pressure.
+The difference in activity between different crystalline facets will be studied with different samples that together offer a good compromise between industrial catalysts and samples compatible with the experimental setup of synchrotron beamlines.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[height=3.5cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
-    \includegraphics[trim=0 100 0 75, clip, height=3.5cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
-    \includegraphics[height=3.5cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
-    \caption{Platinum gazes used in industry (left), Reconstructed phase of a Pt particle measured at SixS, its diameter is of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about 8 mm (right).}
+    \includegraphics[height=3.75cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
+    \includegraphics[trim=140 100 0 75, clip, height=3.75cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
+    \includegraphics[height=3.75cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
+    \caption{
+    Platinum gazes used in industry (left).
+    Reconstructed phase of a Pt particle measured at SixS, its diameter is of about \qty{300}{\nm} (middle).
+    Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about \qty{8}{\mm} (right).
+    }
 \end{figure}
 
 \section{Aim and Scope}
 
-The oxidation of ammonia is a catalytic reaction that has had an extremely high impact on the 19th and 20th century, being at the origin of dramatic changes in the world demography with the fertilizer industry, and being today part of numerous industrial process that not only contribute to the fast climate change with greenhouse gases, but also to the ever growing pollution of our ecosystems.
+The oxidation of ammonia is a catalytic reaction that has had an extremely high impact on the $20^{th}$ and $21^{st}$ century, being at the origin of dramatic changes in the world demography with the fertilizer industry, and being today part of numerous industrial process that not only contribute to the fast climate change with greenhouse gases, but also to the ever growing pollution of our ecosystems.
 
 In this first chapter, the importance of the oxidation of ammonia has been underlined.
 It was shown that despite being a major catalytic process in a multi-billion industry, the exact mechanisms of action are not yet understood.
 If in the frame of this thesis, the focus will be set on the sole oxidation of ammonia, the goal is also to develop experimental methods that can speak to and attract the synchrotron neophyte to the study of heterogeneous catalysis with synchrotron radiation, together with efficient and reliable computer methods that allow good data reduction and analysis.
 
-Indeed, if it is of prime interest for a scientist to always be able to understand the fundamentals and to be ready to answer to the question \textit{why ?}, one must also realize that the impact one has strongly depends on the application and reach of his work.
-Keeping this idea in mind, this thesis aims first at bridging the material and pressure gap to bring forth the possibility for synchrotron users to study catalytic reactions at conditions tending to 'real' industry conditions.
-Secondly, a focus has also been set on explaining the origin, advantages, drawbacks and workflows of each technique, especially for Bragg coherent diffraction imaging, a technique that has yet to reach its full potential through the development of 4th-generation synchrotrons and powerful computing clusters.
+%Indeed, if it is of prime interest for a scientist to always be able to understand the fundamentals and to be ready to answer to the question \textit{why ?}, one must also realize that the impact one has strongly depends on the application and reach of his work.
+Keeping this idea in mind, this thesis aims first at bridging the material and pressure gap to bring forth the possibility for synchrotron users to study catalytic reactions at conditions tending to "real" industry conditions.
+Secondly, a focus has also been set on explaining the origin, advantages, drawbacks and workflows of each technique, especially for Bragg coherent diffraction imaging, a technique that has yet to reach its full potential through the development of $4^{th}$-generation synchrotrons and powerful computing clusters.
 
 \section{Outline of the Thesis}
 
-The initial chapter of this thesis will provide a concise explanation of heterogeneous catalysis and if the fundamental principles governing the interaction between x-rays and matter.
-This will serve to underscore the origins, benefits, and limitations of each technique employed in the study of the ammonia oxidation.
-Additionally, it will explore how these catalytic reactions can be indirectly observed using x-rays, leveraging the unique signatures they leave on the materials involved.
-The SixS synchrotron beamline, which served as the primary location for conducting the majority of experiments, will be presented.
+The initial chapter of this thesis will provide a concise explanation of heterogeneous catalysis and of the fundamental principles governing the interaction between x-rays and matter.
+This will serve to highlight the origins, benefits, and limitations of each technique employed in this study and explore how catalytic reactions can be indirectly observed using x-rays, leveraging the unique signatures they leave on the materials involved.
+The SixS beamline (synchrotron SOLEIL), which served as the primary location for conducting the majority of experiments, will be presented.
 Notably, the latest advancements in experimental techniques specific to this beamline will be covered.
 Finally, the latest computer programs used for the analysis of the collected data and the challenges of data analysis will be presented so that the reader of this thesis has complete knowledge of every step undertaken to obtain the final results.
 
-In a second chapter, the results obtained with three different techniques, surface x-ray diffraction, Bragg coherent diffration imaging and x-ray photoelectron spectroscopy, will be presented.
-Each step will be discussed, sample preparation, the choice of experimental conditions, the reproducibility of the results, the quality of the final data as well as the different difficulties encountered during data collection.
+In a second chapter, the results obtained during the operando, near-ambient pressure study of the catalytic reaction with three different synchrotron techniques, surface x-ray diffraction, Bragg coherent diffration imaging and x-ray photoelectron spectroscopy, will be presented.
+Sample preparation, the choice of experimental conditions, the reproducibility of the results, the quality of the final data as well as the different difficulties encountered during data collection are discussed.
+Moreover, to explore the correlation between surface structure and catalytic activity, mass spectrometry data was collected simultaneously to the other techniques.
 
 Finally, in the last chapter of this thesis will be discussed quantitatively and qualitatively the relation between the result of each technique, their comparison to literature findings, as well as their reliability, representativity and validity, paving the way for any future study.
