--- a/Sections/5_Appendix/OperandoBCDI.tex
+++ b/Sections/5_Appendix/OperandoBCDI.tex
@@ -13,7 +13,7 @@ The ammonia to oxygen ration is represented on the right part of the figure.
     \centering
     \includegraphics[width=0.66\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/MarchingCubes.png}
     \caption{
-    The algorithm generates triangles connecting the vertices to form the mesh surface.
+    The Marching-cubes algorithm generates triangles connecting the vertices to form the mesh surface.
     Each selected configuration has a specific arrangement of vertices that dictate how to form triangles to create a smooth surface.
     Image taken from \url{https://fr.wikipedia.org/wiki/Marching_cubes}
     }
