--- a/references.bib
+++ b/references.bib
@@ -593,6 +593,20 @@ volume = {109},
 year = {2003}
 }
 
+@online{Thermofischer,
+  title = {Reducing ammonia slip in selective catalytic reduction},
+  year = 2023,
+  url = {https://www.thermofisher.com/blog/identifying-threats/reducing-nh3-slip-in-selective-catalytic-reduction-scr/},
+  urldate = {2023-08-06},
+}
+
+@online{MitsubishiSCR,
+  title = {Selective Catalytic Reduction System},
+  year = 2023,
+  url = {https://power.mhi.com/products/aqcs/lineup/flue-gas-denitration/},
+  urldate = {2023-08-06},
+}
+
 @online{NIST_cross_sections,
   author = {Berger, M.J. and Hubbell, J.H. and Seltzer, S.M. and Chang, J. and Coursey, J.S. and Sukumar, R. and Zucker, D.S. and Olsen, K.},
   title = {NIST Standard Reference Database 8 (XGAM)},
@@ -1031,7 +1045,6 @@ year = {1982}
 abstract = {Nanoparticles are essential electrocatalysts in chemical production, water treatment and energy conversion, but engineering efficient and specific catalysts requires understanding complex structure-reactivity relations. Recent experiments have shown that Bragg coherent diffraction imaging might be a powerful tool in this regard. The technique provides three-dimensional lattice strain fields from which surface reactivity maps can be inferred. However, all experiments published so far have investigated particles an order of magnitude larger than those used in practical applications. Studying smaller particles quickly becomes demanding as the diffracted intensity falls. Here, in situ nanodiffraction data from 60 nm Au nanoparticles under electrochemical control collected at the hard X-ray nanoprobe beamline of MAX IV, NanoMAX, are presented. Two-dimensional image reconstructions of these particles are produced, and it is estimated that NanoMAX, which is now open for general users, has the requisites for three-dimensional imaging of particles of a size relevant for catalytic applications. This represents the first demonstration of coherent X-ray diffraction experiments performed at a diffraction-limited storage ring, and illustrates the importance of these new sources for experiments where coherence properties become crucial.},
 author = {Bj{\"{o}}rling, Alexander and Carbone, Dina and Sarabia, Francisco J. and Hammarberg, Susanna and Feliu, Juan M. and Solla-Gull{\'{o}}n, Jos{\'{e}}},
 doi = {10.1107/S1600577519010385},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Bj{\"{o}}rling et al. - 2019 - Coherent Bragg imaging of 60 nm Au nanoparticles under electrochemical control at the NanoMAX beamline.pdf:pdf},
 issn = {16005775},
 journal = {Journal of Synchrotron Radiation},
 keywords = {coherent diffraction imaging,electrocatalysis,nanodiffraction},
@@ -1043,6 +1056,7 @@ title = {{Coherent Bragg imaging of 60 nm Au nanoparticles under electrochemical
 volume = {26},
 year = {2019}
 }
+
 @article{Stielow2021,
 abstract = {Single-shot wide-angle diffraction imaging is a widely used method to investigate the structure of non-crystallizing objects such as nanoclusters, large proteins or even viruses. Its main advantage is that information about the three-dimensional structure of the object is already contained in a single image. This makes it useful for the reconstruction of fragile and non-reproducible particles without the need for tomographic measurements. However, currently there is no efficient numerical inversion algorithm available that is capable of determining the object's structure in real time. Neural networks, on the other hand, excel in image processing tasks suited for such purpose. Here we show how a physics-informed deep neural network can be used to reconstruct complete three-dimensional object models on a voxel grid from single two-dimensional wide-angle scattering patterns. We demonstrate its universal reconstruction capabilities for silver nanoclusters, where the network uncovers novel geometric structures that reproduce the experimental scattering data with very high precision.},
 archivePrefix = {arXiv},
@@ -1825,7 +1839,6 @@ year = {2019}
 abstract = {Using coherent X-ray diffraction imaging (CXDI) as an in situ tool, we determined the shape and strain state of a platinum nanoparticle with ≈160 nm diameter supported by a strontium titanate substrate. The experiment was performed at a temperature of 400 K under continuous gas flow conditions of pure Ar and Ar/CO mixtures. The nanoparticle was preselected by scanning electron microscopy (SEM) and postanalyzed by atomic force microscopy (AFM). We obtain a very good agreement between the overall nanoparticle size, shape, and defect structure as determined by CXDI and AFM. In addition, we compare the strain state in the nanoparticle near surface region and its bulk: For pure Ar flow, we find a slight compressive strain in the nanoparticle bulk compared to an expansion in the near surface region. We ascribe the latter to the presence of high index vicinal surfaces. Our analysis suggests that under mixed Ar/CO flow at 400 K reshaping of the nanoparticle occurred. New high index facets developed, leading to a stronger lattice expansion, also propagating into the nanoparticle bulk. Our high-resolution experiments pave the way for future CXDI experiments under operando catalytic reaction conditions.},
 author = {Abuin, Manuel and Kim, Young Yong and Runge, Henning and Kulkarni, Satishkumar and Maier, Simon and Dzhigaev, Dmitry and Lazarev, Sergey and Gelisio, Luca and Seitz, Christoph and Richard, Marie Ingrid and Zhou, Tao and Vonk, Vedran and Keller, Thomas F. and Vartanyants, Ivan A. and Stierle, Andreas},
 doi = {10.1021/acsanm.9b00764},
-file = {:home/david/Documents/PhD/Papers/Abuin et al. - 2019 - Coherent X-ray Imaging of CO-Adsorption-Induced St.pdf:pdf},
 issn = {25740970},
 journal = {ACS Applied Nano Materials},
 keywords = {catalysis,coherent diffraction imaging,hierarchical marker strategies,in situ conditions,single nanoparticle},
@@ -2455,7 +2468,6 @@ year = {2017}
 abstract = {Mesocrystals are nanostructured materials consisting of individual nanocrystals having a preferred crystallographic orientation. On mesoscopic length scales, the properties of mesocrystals are strongly affected by structural heterogeneity. Here, we report the detailed structural characterization of a faceted mesocrystal grain self-assembled from 60 nm sized gold nanocubes. Using coherent X-ray diffraction imaging, we determined the structure of the mesocrystal with the resolution sufficient to resolve each gold nanoparticle. The reconstructed electron density of the gold mesocrystal reveals its intrinsic structural heterogeneity, including local deviations of lattice parameters, and the presence of internal defects. The strain distribution shows that the average superlattice obtained by angular X-ray cross-correlation analysis and the real, "multidomain"structure of a mesocrystal are very close to each other, with a deviation less than 10\%. These results will provide an important impact to understanding the fundamental principles of structuring and self-assembly including ensuing properties of mesocrystals.},
 author = {Carnis, Jérôme and Kirner, Felizitas and Lapkin, Dmitry and Sturm, Sebastian and Kim, Young Yong and Baburin, Igor A. and Khubbutdinov, Ruslan and Ignatenko, Alexandr and Iashina, Ekaterina and Mistonov, Alexander and Steegemans, Tristan and Wieck, Thomas and Gemming, Thomas and Lubk, Axel and Lazarev, Sergey and Sprung, Michael and Vartanyants, Ivan A. and Sturm, Elena V.},
 doi = {10.1039/d1nr01806j},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Carnis et al. - 2021 - Exploring the 3D structure and defects of a self-assembled gold mesocrystal by coherent X-ray diffraction imaging.pdf:pdf},
 issn = {20403372},
 journal = {Nanoscale},
 month = 06,
@@ -2562,7 +2574,7 @@ issn={2520-1158},
 doi={10.1038/s41929-021-00585-2},
 }
 
-@article{LUDWIG2017313,
+@article{LUDWIG2017,
 title = {Catalyst: Sustainable Catalysis},
 journal = {Chem},
 volume = {2},
@@ -3591,7 +3603,6 @@ pages = {140-149},
 year = {2007},
 issn = {0269-7491},
 doi = {https://doi.org/10.1016/j.envpol.2007.06.033},
-url = {https://www.sciencedirect.com/science/article/pii/S0269749107003089},
 author = {J.W. Erisman and A. Bleeker and J. Galloway and M.S. Sutton},
 keywords = {Reduced nitrogen, Emission, Nitrogen cycle, Ammonia, Effects, Abatement},
 }
@@ -3976,25 +3987,6 @@ year = {2012}
    keywords = {Hybrid detectors, Pixilated detectors and associated  VLSI electronics, X-ray detectors, X-ray diffraction detectors},
    pages = {C01069}
 }
-
-@article{bjorling_coherent_2019,
-   title = {Coherent {Bragg} imaging of 60 nm {Au} nanoparticles under electrochemical control at the {NanoMAX} beamline},
-   volume = {26},
-   copyright = {https://creativecommons.org/licenses/by/4.0/},
-   issn = {1600-5775},
-   doi = {10.1107/S1600577519010385},
-   abstract = {Coherent imaging in the Bragg geometry of nanoparticles inside an electrochemical cell is presented.},
-   language = {en},
-   number = {5},
-   urldate = {2020-02-02},
-   journal = {Journal of Synchrotron Radiation},
-   author = {Bj\"{o}rling, A. and Carbone, D. and Sarabia, F. J. and Hammarberg, S. and Feliu, J. M. and Solla-Gullón, J.},
-   month = 09,
-   year = {2019},
-   pages = {1830--1834},
-   file = {Bj\"{o}rling et al. - 2019 - Coherent Bragg imaging of 60 nm Au nanoparticles u.pdf:/Users/marieingridrichard/Zotero/storage/AA9I8DJM/Bj\"{o}rling et al. - 2019 - Coherent Bragg imaging of 60 nm Au nanoparticles u.pdf:application/pdf;Snapshot:/Users/marieingridrichard/Zotero/storage/62HFY7SY/paper.html:text/html}
-}
-
 
 @article{fernandez_situ_2019,
    title = {\textit{{In} situ} structural evolution of single particle model catalysts under ambient pressure reaction conditions},
@@ -7153,6 +7145,21 @@ abstract = {The Temporal Analysis of Products (TAP) reactor has been applied to 
    year = {2015},
    file = {Paskiewicz et al. - 2015 - Nanomembrane-based materials for Group IV semicond.pdf:/Users/marieingridrichard/Zotero/storage/F75T5UBZ/Paskiewicz et al. - 2015 - Nanomembrane-based materials for Group IV semicond.pdf:application/pdf}
 }
+
+@article{RLMcGreevy_2001,
+doi = {10.1088/0953-8984/13/46/201},
+year = {2001},
+month = {nov},
+publisher = {},
+volume = {13},
+number = {46},
+pages = {R877},
+author = {R L McGreevy},
+title = {Reverse Monte Carlo modelling},
+journal = {Journal of Physics: Condensed Matter},
+abstract = {Reverse Monte Carlo (RMC) modelling is a general method of structural modelling based on experimental data. RMC modelling can be applied to many different sorts of data, simultaneously if wished. Powder and single-crystal neutron diffraction (including isotopic substitution), x-ray diffraction (including anomalous scattering) and electron diffraction, extended x-ray absorption fine structure and nuclear magnetic resonance (magic angle spinning and second moment) have already been used to provide data. RMC modelling can also be applied to many different types of system - liquids, glasses, polymers, crystals and magnetic materials. This article outlines the RMC method and discusses some of the common misconceptions about it. It is stressed that RMC models are neither unique nor `correct'. However, they are often useful for aiding our understanding either of the structure itself, or of the relationships between local structure and other physical properties. Examples are given and the possibilities for further development of the RMC method are discussed.}
+}
+
 
 @article{croset_form_2017,
    title = {Form factor of any polyhedron: a general compact formula and its singularities},
