--- a/Sections/2_Theory_Models/BCDI.tex
+++ b/Sections/2_Theory_Models/BCDI.tex
@@ -1,6 +1,6 @@
 \section{BCDI} \label{sec:BCDI}
 
-Bragg Coherent Diffraction Imaging (BCDI) \parencite{robinson_coherent_2009} is a powerful technique for the non-destructive characterisation of material structure in three dimensions with unparalleled spatial and strain resolution, few nanometers \parencite{labat_inversion_2015,cherukara_anisotropic_2018} and $10^{-4 }$ respectively \parencite{Newton2010,Lauraux2020}.
+Bragg Coherent Diffraction Imaging (BCDI) \parencite{robinson_coherent_2009} is a powerful technique for the non-destructive characterisation of material structure in three dimensions with unparalleled spatial and strain resolution, few nanometers \parencite{labat_inversion_2015,cherukara_anisotropic_2018} and \num{e-4} respectively \parencite{Newton2010,Lauraux2020}.
 
 The BCDI method is reliant on the coherence (sec. \ref{sec:Coherence}) of the light available, thus only began to be exploited at third generation synchrotron sources \parencite{Miao1999,Miao2000,Robinson2001}.
 Since then it was developed into a characterisation tool for \textit{in situ / operando} studies of materials structure \parencite{ulvestad_situ_2016,Kim2019,Carnis2021} and will gain significantly (several orders of magnitude) from further source and beamline improvements as many synchrotrons have recently completed or are in the process of an upgrade from $3^{rd}$ to $4^{th}$ generation synchrotrons.
@@ -15,7 +15,7 @@ Moreover, the scattering volume is assumed to be in the focal plane of the focus
 Finally, the scattering volume is assumed to be small with dimensions below the x-ray extinction length to ignore multiple scattering and stay in the kinematical approach of diffraction.
 The amplitude of the incident field is considered to be homogeneous in the scattering volume.
 
-A dynamical approach to BCDI has been under recent study by the community \parencite{Yan2014, Shabalin2017, Hu2018, Gao2022} by the means of the Takagi-Taupin approach to dynamical diffraction \parencite{Takagi1962, Takagi1969} which tend to validate the kinematical approach when working with slightly strained sub-micron sized crystals \parencite{Karpov2019, Barringer2021}.
+The community has recently been investigating a dynamical approach to Bragg Coherent Diffraction Imaging (BCDI) \parencite{Yan2014, Shabalin2017, Hu2018, Gao2022} using the Takagi-Taupin \parencite{Takagi1962, Takagi1969}. This method tends to validate the kinematical approach when working with slightly strained sub-micron sized crystals \parencite{Karpov2019, Barringer2021}.
 The phase of the incoming and scattered waves must however be corrected for refraction and absorption \parencite{Harder2007, Gao2022} which does not contradict the main hypothesis of the kinematical approach which is that in the Born approximation, the structure factor of the crystal is equal to the Fourier transform of its electronic density \parencite{Paganin}.
 
 Another approach is to write the structure factor as the sum over each atom present in the crystal of the atomic scattering factor multiplied by a phase component (eq. \ref{eq:FCrystal1}).
@@ -64,7 +64,7 @@ To reduce the complexity in the second part of eq. \ref{eq:FcrystalBCDI2}, only 
 The first part of eq. \ref{eq:FcrystalBCDI6} can be considered to be the Fourier transform of the unit cell $k$ of electronic density $\rho_k(\vec{r})$ in which all atoms have the same displacement vector $\vec{u}_k$, in this equation the electronic density is allowed to vary from one unit cell to another.
 Moreover, one can recognize the expression of a discrete Fourier transform (DFT) of frequency $\vec{G}$ in which $\rho_k(\vec{r})$ is the $k-th$ sample of the series that consist in $N_{uc}$ samples \parencite{Cooley1965, Cochran1967, favre-nicolin_semiconductor_2011, Godard2021}.
 The reason for the approximation $\vec{q} \approx \vec{G}$ is simply to be able to use a Fast Fourier Transform (FFT) algorithm to compute the DFT that has a linearithmic time complexity $O(n \, log(n))$.
-This approximation breaks down far away from the Laue condition or if the strain is so important that the condition $(\vec{q}-\vec{G}).\vec{u}_k<<1$ is not anymore respected to move from eq. \ref{eq:FcrystalBCDI5} to eq. \ref{eq:FcrystalBCDI6}.
+This approximation breaks down far away from the Laue condition or if the strain is so important that the condition $(\vec{q}-\vec{G}).\vec{u}_k<<1$ is not anymore respected to move from eq. \ref{eq:FcrystalBCDI5} to eq. \ref{eq:FcrystalBCDI6} \parencite{Takagi1969}.
 
 In the case of highly strained crystal, or when the intensity must be computed far away from Bragg peaks, it is still possible to resort to so-called \textit{atomistic} simulations by computing the scattering intensity from the position of each atom in the crystal (eq. \ref{eq:FCrystal1}).
 However, the position of each atom must be known and, for a large crystal, the sum becomes too large to handle even with high-perfomance clusters due to a quadratic time complexity $O(n^2)$.
@@ -73,7 +73,7 @@ Atomistic simulations are usually used when studying crystals of dimensions belo
 For a non-strained crystal, the scattering intensity distribution around every Bragg peak is the same, equal to the Fourier transform of the crystal's electronic density.
 In the case of a strained crystal, the additional phase factor introduced in eq. \ref{eq:FcrystalBCDI7} breaks the centrosymmetry around each Bragg peak due to the inhomogeneous displacement field in the crystal.
 The effect of the displacement can be seen in the distortion of the scattering intensity around Bragg peaks.
-It is important to notice that the phase in eq. \ref{eq:FcrystalBCDI7} is equal to the dot product between the displacement vector and the reciprocal space vector, which means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks that will yield the displacement field over an orthogonal base ($\vec{q_1}, \vec{q_2}, \vec{q_3}$).
+It is important to notice that the phase in eq. \ref{eq:FcrystalBCDI7} is equal to the dot product between the displacement vector and the reciprocal space vector, which means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks \parencite{Newton2010} that will yield the displacement field over an orthogonal base ($\vec{q_1}, \vec{q_2}, \vec{q_3}$).
 
 \subsubsection{Data collection} \label{sec:DataCollectionBCDI}
 
@@ -88,6 +88,7 @@ This measurement is called a rocking curve (fig. \ref{fig:3DDP} - left), the ass
     (Left) Rocking curve for the measurement of the 3D scattered intensity around a Bragg peak.
     (Right) 3D diffraction pattern collected at SixS (SOLEIL).
     Different iso-surfaces from high (red) to low (yellow) intensity are plotted, highlighting the drop of the scattered intensity as a function of $q_{hkl}+\delta q$ where $\delta q$ is the distance from the center of the Bragg peak.
+    COLORBAR
     }
     \label{fig:3DDP}
 \end{figure}
@@ -114,9 +115,12 @@ Without the phase information, it is impossible to directly reconstruct the elec
 It has been demonstrated that when fulfilling the \textit{oversampling} condition, it is possible to retrieve the phase lost during the measurement \parencite{Shannon1949, sayre_implications_1952}.
 The oversampling condition refers to the practice of sampling a signal at a higher sampling rate than the Nyquist rate, which is twice the highest frequency present in the signal, increasing the sampling rate in reciprocal space results in a denser set of data points in real space.
 
-In the case of faceted crystals, the oversampling $\sigma$ can be derived by computing the distance between the fringes on rods in directions opposite to the facets, it was shown that the interfringe $\delta q$ observed on the rods is proportional to the size of the crystal in that direction, $t$, following the relation $\delta q = \frac{2\pi}{t}$ (sec. \ref{sec:LatticeFactor}).
-For small crystals ($t<um$), the interfringe is not too small and it thus becomes possible to oversample the fringes.
+In the case of low-strained faceted crystals, the oversampling $\sigma$ can be derived by computing the distance between the fringes on rods in directions opposite to the facets, it was shown that the interfringe $\delta q$ observed on the rods is proportional to the size of the crystal in that direction, $t$, following the relation $\delta q = \frac{2\pi}{t}$ (sec. \ref{sec:LatticeFactor}).
+For small crystals ($t<$ few \unit{um}), the interfringe is not too small and it thus becomes possible to oversample the fringes.
 The instrumental requirement for oversampling in the direction of a rod is thus simply that the detector must have at least two pixels between each fringe: $\sigma >2$.
+There is also the possibility to adapt the detector distance to get a good oversampling.
+At \qty{8}{\keV}, to get an oversampling of 3, the detector must be positioned at \qty{6.4}{\m} for a particle of \qty{6}{\um}.
+
 In three dimensions, the oversampling condition becomes $\sigma>2^{1/3}$ \parencite{Miao1998, Miao2000, miao_possible_2000}.
 When it comes to Fourier transforms, higher oversampling can offer several advantages such as reducing the possibility of aliasing (high-frequency components being mistakenly represented as lower frequencies due to insufficient sampling), spectral leakage (frequency components spread into neighboring frequency bins in the Fourier transform, minimized if the frequency bins become narrower).
 Moreover, with more densely spaced samples, the interpolation process can more faithfully reconstruct the original signal without introducing artifacts
@@ -150,13 +154,14 @@ By iterating between the real and reciprocal space, the algorithm converges towa
 \end{figure}
 
 The error-metric used to follow the convergence of the algorithm is simply the mean squared error between the square root of the measured intensity and the structure factor computed from the Fourier transform of the electronic density $A(\vec{q})$ (eq. \ref{eq:MSE}).
-The main drawback of this error-metric is that each voxel is given the same weight, in this assumption is not a problem when working near the Bragg peak, 4th generation synchrotron that possess a higher flux make it possible to sample the signal in region further away from the Bragg peak.
-A detailed study of the impact of trying to improve the image resolution by increasing the distance from the center of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
 
 \begin{equation}
     \label{eq:MSE}
     E = \frac{\sum \big( F(\vec{q}) - \sqrt{I(\vec{q})}  \big)^2}{I(\vec{q})}
 \end{equation}
+
+The main drawback of this error-metric is that each voxel is given the same weight, in this assumption is not a problem when working near the Bragg peak, $4^{th}$ generation synchrotron that possess a higher flux make it possible to sample the signal in region further away from the Bragg peak.
+A detailed study of the impact of trying to improve the image resolution by increasing the distance from the center of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
 
 More algorithms have since then been developped that try to help converge towards the final solution without being stuck in local minima such as the hybrid input-output (HIO) and relaxed averaged alternating reflections (RAAR) algorithms, by introducing a new parameter, $\beta$, which relaxes the threshold condition in real space from the ER algorithm.
 Additional details can be found in \cite{Marchesini2003,Luke2005,Marchesini2007}.
@@ -171,7 +176,8 @@ Moreover, new methods such as convolution neural networks (CNN) are under study 
 The resolution of the reconstructed object, defined according to multiple parameters in the literature, is critical for an imaging technique.
 The voxel size in real space $2\pi / \delta q_x, 2\pi / \delta q_y, 2\pi / \delta q_z$ depends on the extent of the collected volume in the reciprocal space $\delta q_x, \delta q_y, \delta q_z$.
 However the voxel size would only be a good criteria to determine the resolution if the signal to noise ratio of the scattering intensity was high enough in all of the probed reciprocal space volume, so that all of the frequencies in the q-space could be effectively retrieved with the FFT algorithm.
-If this is the case in simulated data, it is not with experimental data for which the noise starts to become important far away from the Bragg peak, keeping in mind that the intensity decreases as a function of $q^{-4}$ \parencite{Marchesini2003a} as a function of the distance from the Bragg peak.
+If this is the case in simulated data, it is not with experimental data for which the noise starts to become important far away from the Bragg peak, keeping in mind that the intensity decreases as a function of $q^{-4}$ \parencite{Marchesini2003a} as a function of the distance from the Bragg peak, depending also on the form factor \parencite{croset_form_2017}.
+TO DO READ
 The community has therefore relied so far on three methods to estimate the spatial resolution of the reconstructed electronic density.
 
 First, the Phase Retrieval Transfer Function (PRTF) \parencite{chapman_high-resolution_2006} is the \textit{ratio} of the calculated structure factor $|F_k(\vec{q})|$ to the square-root of the measured intensity $\sqrt{I_k(\vec{q})}$ as a function of the resolution shell.
@@ -182,7 +188,7 @@ $\delta q$ is the width of the resolution shell which divides the extent $[q_{mi
     PRTF(q_k, q_{k+1}) = \frac{|<F_k(\vec{q})>|}{<\sqrt{I_k(\vec{q})}>}
 \end{equation}
 
-Secondly, the Fourier shell correlation (FSC) \parencite{van_heel_fourier_2005} measures the \textit{normalized cross-correlation coefficient} between the structure factor of two independant reconstructions, also as a function of the resolution shell but from two independant datasets collected with the same instrumental parameters.
+Secondly, the Fourier shell correlation (FSC) \parencite{van_heel_fourier_2005} measures the \textit{normalized cross-correlation coefficient} between the structure factor of two independent reconstructions, also as a function of the resolution shell but from two independent datasets collected with the same instrumental parameters:
 
 \begin{equation}
     FSC(q_k, q_{k+1}) = \frac{ |\sum F_{1,k} F_{2,k}^*| }{\sqrt{ \sum F_{1,k} F_{1,k}^* \times \sum F_{2,k} F_{2,k}^*}}
@@ -204,26 +210,29 @@ This method is then called the strain shell correlation \parencite{Girard2020}.
 However, one must keep in mind that the upper threshold for the strain resolution exists based on the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ condition, which mostly affect the quality of the phase retrieval, highly strained crystals are very difficult to reconstruct and represent the next milestone in Bragg coherent diffraction imaging.
 One could imagine a future in which the atomistic computation of the scattering factor has been so optimized that phase retrieval algorithms would only be needed to provide an initial guess to the electronic density, and be replaced in the final steps by a simple fitting of the computed structure factor to the square root of the measured intensities.
 
+ reverse Monte Carlo pour permettre un fit multi-paramètres
+ Monte carlo \parencite{RLMcGreevy_2001}
+
 \subsection{Facet analysis} \label{sec:FacetAnalysis}
 
 After phase retrieval, it is possible to manipulate the electronic density of the reconstructed crystal.
 The surface of the crystal corresponds to a layer of voxels in the three dimensional array defined by a threshold of its maximum density.
-As seen in the histogram in fig. \ref{fig:histo} that represents the number of voxels per bin of electronic density, an empiric criterion to select the contour threshold is to take the value at the lowest foot of the peak corresponding to bulk voxels, here around $0.75$, resulting in a clear distinction between surface and bulk.
+As seen in the histogram in fig. \ref{fig:histo} that represents the number of voxels per bin of electronic density, an empiric criterion to select the contour threshold is to take the value at the lowest foot of the peak corresponding to bulk voxels, here around \num{0.75}, resulting in a clear distinction between surface and bulk.
 Guidelines on how to select this threshold are given in \cite{Carnis2019_scientific_reports}, the objective being to select correctly the object's surface voxels.
 
 \begin{figure}[!htb]
    \centering
    \includegraphics[width=0.66\textwidth]{/home/david/Documents/PhD/Figures/gwaihir/norm_dist.png}
    \caption{Histogram representing the distribution of the amplitude of the electronic density.
-   An empirical criterion to select the contour threshold is to take the base of the peak ($\mu - 2\sigma$), here around 0.75.
-   Note that most points in the array have values close to zero, for they are not part of the reconstructed object, and are here ignored.
+   An empirical criterion to select the contour threshold is to take the lowest base of the peak, here around 0.75.
+   Note that most points in the array have values close to zero, for they are not part of the reconstructed object, and are here ignored. TO IMPROVE
    }
    \label{fig:histo}
 \end{figure}
 
 Once the threshold for the iso-surface is selected, it is possible to visualize a contour of the object with specialized solutions such as \textit{Paraview} (\cite{Ahrens2001} - fig. \ref{fig:facets_paraview}) or \textit{Gwaihir} (\cite{Simonne2022} - fig. \ref{fig:3D_object}).
 Crystallographic facets can be identified on the surface of the reconstructed object when studying faceted objects with a highly coherent beam \parencite{richard_crystallographic_2018}, allowing in-depth studies of facet dependent strain and displacement.
-As described in sec. \ref{sec:Catalysis}, lattice strain and displacement are key factors in fields such as heterogeneous catalysis \parencite{ulvestad_situ_2016,kim_active_2018,fernandez_situ_2019,Passos2020,Carnis2021} or electrochemistry \parencite{vicente_bragg_2021}.
+As described in sec. \ref{sec:Catalysis}, lattice strain and displacement are key factors in fields such as heterogeneous catalysis \parencite{ulvestad_situ_2016,kim_active_2018,fernandez_situ_2019,Passos2020,Carnis2021} or electrochemistry \parencite{vicente_bragg_2021, Atlan2023}.
 
 Retrieving the facets can be achieved by analysing the probability distributions of the orientations of triangle normals on a mesh representation of the object \parencite{Grothausmann2012}.
 This method is used in the \textit{Paraview} plugin FacetAnalyser \parencite{GrothausmannBeare2015}, and yields a list of features detailed in tab. \ref{tab:facets}.
@@ -237,7 +246,11 @@ The result depends on the algorithm input parameters, such as the minimum relati
 \begin{figure}
     \centering
     \includegraphics[width=0.66\textwidth]{/home/david/Documents/PhD/Figures/gwaihir/facets_D6.png}
-    \caption{On this screenshot taken from \textit{Paraview}, the particle facets are identified by a white contour. The coloring represents the phase of the reconstructed object, proportional to the lattice displacement. This particle has a diameter of about 800 nm.}
+    \caption{
+    On this screenshot taken from \textit{Paraview}, the particle facets are identified by a white contour.
+    The coloring represents the phase of the reconstructed object along the [111] direction, proportional to the lattice displacement along the [111] direction.
+    This particle has a diameter of about 800 nm.
+    }
     \label{fig:facets_paraview}
 \end{figure}
 
@@ -245,18 +258,22 @@ The result depends on the algorithm input parameters, such as the minimum relati
     \begin{center}
     \resizebox{0.95\textwidth}{!}{%
     \begin{tabular}{@{}lllll@{}}
-    %\toprule
-    Facet id & Facet normal & Relative facet size & Average displacement (\AA)& Average strain ($10^{-4}$)\\
-    %\midrule
-    1 & $(1, 1, 1)$ & 0.106 & $0.080 \pm 0.173$      & $-0.28 \pm 0.51$\\
-    2 & $(\bar{1}, \bar{1}, \bar{1})$ & 0.223 & $0.052 \pm 0.26$     & $-1.17 \pm 0.64$\\
-    3 & $(1, \bar{1}, 0)$ & 0.106 & $0.080 \pm 0.173$    & $-0.28 \pm 0.51$\\
-    4 & $(1, 0, 0)$ & 0.096 & $0.137 \pm 0.192$ & $0.27 \pm 0.49$\\
-    0 & Edges and corner & NaN & $-0.224 \pm 0.259$ & $0.20 \pm 0.86$\\
-    %\bottomrule
+    \toprule
+    Facet id & Facet normal & Relative facet size & Average displacement (\unit{\angstrom})& Average strain (\num{e-4})\\
+    \midrule
+    1 & $(1, 1, 1)$                   & \num{0.106} & \num{0.080 \pm 0.173}  & \num{-0.28 \pm 0.51}\\
+    2 & $(\bar{1}, \bar{1}, \bar{1})$ & \num{0.223} & \num{0.052 \pm 0.260}  & \num{-1.17 \pm 0.64}\\
+    3 & $(1, \bar{1}, 0)$             & \num{0.106} & \num{0.080 \pm 0.173}  & \num{-0.28 \pm 0.51}\\
+    4 & $(1, 0, 0)$                   & \num{0.096} & \num{0.137 \pm 0.192}  & \num{0.27 \pm 0.49}\\
+    0 & Edges and corner              & NaN         & \num{-0.224 \pm 0.259} & \num{0.20 \pm 0.86}\\
+    \bottomrule
     \end{tabular}
     }
     \end{center}
-    \caption{The output of facet analysis is a list of values for each facet. The accessible features are the facet size, the average strain, the average displacement, the facet center and the facet normal. The uncertainty on the average displacement and strain corresponds to the standard deviation of  the displacement and strain distribution, respectively.}
+    \caption{
+    The output of facet analysis is a list of values for each facet.
+    The accessible features are the facet size, the average strain and displacement (along the [111] direction), the facet center and the facet normal.
+    The uncertainty on the average displacement and strain corresponds to the standard deviation of  the displacement and strain distribution, respectively.
+    }
     \label{tab:facets}
 \end{table}{}
