--- a/Sections/2_Theory_Models/ComputerPrograms.tex
+++ b/Sections/2_Theory_Models/ComputerPrograms.tex
@@ -7,7 +7,7 @@ Synchrotrons have effectively stepped in the wold of "big data" \parencite{Aliza
 This data is typically too complex or large to be processed and analyzed using traditional data management tools or methods that were originally written to simulate or fit only a few datasets at a time.
 In the specific case of Bragg coherent diffration imaging, new tools have been developed during the thesis (sec. \ref{sec:Gwaihir}, \cite{jerome_carnis_2021_5741935, Simonne2022}) to help create a fast and reproducible workflow.
 Nevertheless, it is a more general way of working that must be adopted in synchrotrons to adapt and profit from the transition to big data \parencite{Wang2018}.
-This does not only concern scientific analysis but also the complexity of synchrotron beamlines that could benefit from the use of big data to upgrade their performance (cite projet maxime).
+This does not only concern scientific analysis but also the complexity of synchrotron beamlines that could benefit from the use of big data to upgrade their performance (CITE MAXIME PROJECT).
 
 First, synchrotron data must be stored in a comprehensive data format \parencite{Konnecke2015} that contains not only detector images but all of the important metadata linked to the experiment, providing a more comprehensive and detailed view.
 The fine selection of the beamline attributes that can be of interest for the discovery of hidden patterns, correlations, and trends that may not be apparent with smaller datasets is left to the beamline scientists.
@@ -24,18 +24,19 @@ These insights can lead to new discoveries and enhance our understanding of comp
 On one hand, linking reproducibility and big data is crucial for ensuring the credibility and reliability of the insights derived from large and complex datasets.
 Reproducibility in the context of big data refers to the ability to replicate or re-run data analysis processes to obtain consistent results.
 Achieving reproducibility with big data can be challenging due to the massive volume, velocity, and variety of the data involved.
-For example, in the case of Bragg coherent diffraction imaging, if measurements can take up to an hour at 3rd generation synchrotrons such as SOLEIL, it is now possible to measure a single rocking curve in less than a minute at specialized beamlines such as ID01 at the upgraded european synchrotron \parencite{Richter2019}.
+For example, in the case of Bragg coherent diffraction imaging, if measurements can take up to an hour at $3^{rd}$ generation synchrotrons such as SOLEIL, it is now possible to measure a single rocking curve in less than a minute at specialized beamlines such as ID01 at the upgraded European synchrotron \parencite{Richter2019}.
 %In that case, in order to maximize the output of experiments carried out at synchrotrons
 
 On the other hand, discussions about defining a set of rules that regulate research practice \parencite{Kretser2019} and reduce the grey zone that includes scientific misconduct at all levels of academia \parencite{Kornfeld2016} are growing, raising awareness on data reproducibility in the scientific community.
 
-Staggering numbers \parencite{Baker2016}, show that about 65\% of scientists in the field of physics and engineering struggle to reproduce others' results, and more than 50 \% fail to reproduce their own results.
+Staggering numbers \parencite{Baker2016} show that about 65\% of scientists in the field of physics and engineering struggle to reproduce others' results, and more than 50\% fail to reproduce their own results.
 These numbers can sometimes be linked to very precise environments and techniques, with experimental conditions and processes difficult to reproduce between different laboratories, and also to knowledge transfer from academia to industry \parencite{DanielSarwitz2015}.
 However, according to the study  \parencite{Baker2016}, code availability, insufficient peer reviewing, and access to raw data contribute to non-reproducible research.
 Moreover, it is largely accepted that the publishing industry has its own role to play by facilitating peer-reviewing to promote reproducibility \parencite{Lee2017}.
 
 Therefore, code-availability, access to raw data combined with metadata, and reproducible workflows are goals of utmost importance for experimental science \parencite{Munafo2017}.
 Reproducible data will result in a global improvement of confidence in new techniques, such as BCDI, which could subsequently result in growth of interest and community.
+Key problems are for example the difficulty to reconstruct highly strained objects, and determining a good metric that would allow scientists to trust reconstruted data.
 
 \subsection{The Jupyter environment}
 
@@ -87,7 +88,7 @@ A 3D intensity distribution in the vicinity of a Bragg peak (stack of diffractio
     \label{fig:Packages}
 \end{figure}
 
-There are three main steps to complete to image the strain (fig. \ref{fig:Packages}); it must first be pre-processed (removal of parasitic scattering intensities, \textit{etc.} \parencite{ozturk_performance_2017}).
+There are three main steps to image the strain (fig. \ref{fig:Packages}); it must first be pre-processed (removal of parasitic scattering intensities, \textit{etc.} \parencite{ozturk_performance_2017}).
 It must then be inverted \textit{via} phase retrieval \parencite{miao_possible_2000}, the phase containing important information lost during the measurement.
 Finally, it is possible to extract meaningful results from the three dimensional complex images after post-processing (removal of phase offset, interpolation in a common orthonormal frame, \textit{etc}).
 Several software packages were developed to solve these steps but none bring a comprehensive pipeline from start to finish.
@@ -96,7 +97,7 @@ For example, \textit{PyNX} \parencite{pynx2020operators} focuses on the phase re
 A few graphical user interfaces (GUIs) also exist, such as \textit{Cohere} \parencite{cohere_2021}, \textit{Phasor} \parencite{dzhigaev_dzhigaevdphasor_2021}, and \textit{Bonsu} \parencite{newton_bonsu_2012}.
 Providing a workflow will reduce the time spent on data analysis for newcomers, and improve results reproducibility by facilitating sharing while keeping track of analysis parameters and metadata.
 
-\textit{Gwaihir} is a tool developed by the author of this thesis which brings together the functionality of the \textit{PyNX} package for phase retrieval and bcdi package for the pre- and post- processing in a graphical user interface (GUI) built for the Jupyter framework \parencite{Kluyver2016jupyter}.
+\textit{Gwaihir} is a tool developed during this thesis which brings together the functionality of the \textit{PyNX} package for phase retrieval and \textit{bcdi} package for the pre- and post- processing in a graphical user interface (GUI) built for the Jupyter framework \parencite{Kluyver2016jupyter}.
 It provides an interface to the bleeding edge of data analysis in BCDI, it can be used locally or remotely and offers an interactive and user-friendly interface with complex functionality satisfying both beginners and experts.
 
 \subsubsection{Software structure}
@@ -126,7 +127,7 @@ Some facilities have started to make computational resources available to their 
     \label{fig:Workflow}
 \end{figure}
 
-\textit{Gwaihir} offers an interactive workflow separated in three main groups, data pre-processing, phase retrieval, and data post-processing (fig. \ref{fig:Packages}). It is meant to be reproducible, simple to share, resulting in the phase and amplitude of the probed object. To illustrate this, the results of the following procedure on a data-set collected at the P10 beamline in at PETRA III are shown in fig. \ref{fig:GUI_file} (CXI dataset ID 195).
+\textit{Gwaihir} offers an interactive workflow separated in three main groups, data pre-processing, phase retrieval, and data post-processing (fig. \ref{fig:Packages}, \ref{fig:Workflow}). It is meant to be reproducible, simple to share, resulting in the phase and amplitude of the probed object. To illustrate this, the results of the following procedure on a data-set collected at the P10 beamline in at PETRA III are shown in fig. \ref{fig:GUI_file} (CXI dataset ID 195).
 
 The parameters used during the analysis are displayed in the GUI in an order following a typical workflow, to underline the evolution of the data processing.
 These parameters are ultimately saved as attributes of the \textit{Python} data object, to keep track of the actions applied to the raw data to obtain the final result.
@@ -138,7 +139,7 @@ These parameters are ultimately saved as attributes of the \textit{Python} data 
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/gwaihir/crop_phase_red.png}
     \caption{
     %Each parameter used during the data analysis is stored in the same \textit{.cxi} file, along with the results, as seen in the nested architecture on the left of the Figure.
-    Here a 2D slice of a 3D coherent diffraction pattern is shown (top), with the phase of the electron density (radiants) of the reconstructed object in which the facets are clearly visible (bottom). The data array are displayed via \textit{JupyterHub}, a browser-based data analysis platform available on the \textit{SLURM} computer cluster for the ESRF and the \textit{GRADES} computing cluster at SOLEIL.
+    Here a 2D slice of a 3D coherent diffraction pattern is shown (top), with the phase of the electron density (radiants) of the reconstructed object in which the facets are clearly visible (bottom). The data array are displayed \textit{via} \textit{JupyterHub}, a browser-based data analysis platform available on the \textit{SLURM} computer cluster for the ESRF and the \textit{GRADES} computing cluster at SOLEIL.
     }
     \label{fig:GUI_file}
 \end{figure}
@@ -147,7 +148,7 @@ These parameters are ultimately saved as attributes of the \textit{Python} data 
 
 Data pre-processing aims at improving the quality of the phase retrieval by optimising the size and content of the 3D array used as input.
 The minimal processing consists in loading the raw data and stacking it together as an input for the phase retrieval.
-Intermediate optional steps can be added via a YAML (YAML Ain't Markup Language) configuration file.
+Intermediate optional steps can be added \textit{via} a YAML (YAML Ain't Markup Language) configuration file.
 
 Once the raw data is collected, different pre-processing parameters can be modified to optimize the 3D diffraction intensity.
 For example, the array must be centered for the Fourier transforms, the center is either fixed manually as the center of the Bragg peak if known, or determined as the center of mass of the 3D array during the analysis.
@@ -163,13 +164,13 @@ Finally, it is possible to normalise the raw data by an intensity monitor, or co
 
 The diffracted intensity collected by the detector is proportional to the squared modulus of the structure factor $F(\vec{q})$ (Equations \ref{eq:ScatteredIntensity}-\ref{eq:DetectorIntensity}).
 To retrieve the phase from the diffracted intensity, \textit{PyNX} uses iterative algorithms (sec \ref{sec:BCDI}).
-New methods such as convolution neural networks (CNN) are under study and have started to show some encouraging results, but are not yet sufficiently robust, particularly in the case of strained particles \cite{cherukara_real-time_2018,chan_rapid_2021,Wu2021a}.
+New methods such as convolution neural networks (CNN) are under study and have started to show some encouraging results, but are not yet sufficiently robust, particularly in the case of strained particles \parencite{cherukara_real-time_2018,chan_rapid_2021,Wu2021a}.
 
-The parameters necessary to phase retrieval \parencite{fienup_phase_1982,fienup_reconstruction_1978,Marchesini2007,pynx2020operators} \textit{e.g.} the support threshold, the number of iterations for each algorithm, the object initialisation procedure (square, sphere, auto-correlation), and so on can be modified in the GUI (fig. \ref{fig:PRT}.
+The parameters necessary to phase retrieval \parencite{fienup_phase_1982,fienup_reconstruction_1978,Marchesini2007,pynx2020operators} \textit{e.g.} the support threshold, the number of iterations for each algorithm, the object initialisation procedure (square, sphere, auto-correlation), and so on can be modified in the GUI (fig. \ref{fig:PRT}).
 Initial guesses are given for each parameter but must be refined by the user to optimize the results.
 
 \textit{PyNX}'s recent update includes mathematical operators \parencite{pynx2020operators} which represent most of the reconstruction operations traditionally used in phase retrieval \parencite{gerchberg_practical_1972,fienup_reconstruction_1978,Marchesini2007} and is at the foundation of quick and interactive phase retrieval in \textit{Gwaihir}.
-Indeed, state-of-the-art GPUs available onsite where data collection occurs enables almost real time data reduction.
+Indeed, state-of-the-art GPUs available onsite where data collection occurs enable almost real time data reduction.
 This results in quick visualisation of the probed object's amplitude and phase offering the possibility to synchrotron users to optimize their data acquisition during the experiment.
 Such live feedback is critical to the success of an experiment and provides broader opportunities in the type of experiments that can be carried on.
 
@@ -181,6 +182,7 @@ With well-tuned parameters and high quality data-sets, phase retrieval converges
 The most important limiting factors for the convergence of the reconstruction algorithms are the quality of the measurement and the amout of strain going through the particle.
 A crystal which is well faceted and not strained will always converge towards the same solution.
 However, in the case of highly strained object, part of the intensity will be scattered in a direction that does not fit the area collected by the detector which will result in void areas inside the reconstructed electronic density.
+Moreover, the support becomes very difficult to determine since the diffraction intensity does not correspond to the lattice factor anymore.
 
 \begin{figure}[!htb]
     \centering
@@ -200,7 +202,7 @@ An alternative approach also available in \textit{Gwaihir} is to take the averag
 
 Post-processing regroups methods applied to the complex output of the phase retrieval.
 Once the solution with the best figure of merit is selected, it is possible to use the \textit{bcdi} scripts to process the object's phase.
-If the data is still in the detector frame (geometric transformation not applied during pre-processing), the data is interpolated in an orthonormal frame using the transformation matrix.
+If the data is still in the detector frame (geometric transformation not applied during pre-processing), the data is interpolated in an orthogonal frame using the transformation matrix.
 First, the correct beamline and instrumental parameters must be selected (\textit{e.g.} sample-detector distance, probing energy, detector pixel size, \textit{etc}...), usually constant throughout the experiment.
 For example, the orthogonalisation tab regroups the parameters needed to properly set up the transformation matrix between the sample frame and \textit{e.g.} the laboratory frame.
 By choosing to transform the final object in a common, orthogonal frame, it becomes easier to compare the object's evolution when probing different Bragg reflections \parencite{crystal_sarah}.
@@ -217,8 +219,7 @@ For example, \cite{guizar-sicairos_phase_2011} and \cite{hofmann_nanoscale_2020}
 
 \textit{Gwaihir} links in a unique user-friendly and interactive GUI the aforementioned packages whilst offering 2D/3D browser-based data visualisation tools.
 Therefore, the main purpose of \textit{Gwaihir}, is to offer a possibility for the user to work solely in the Jupyter environment.
-The graphical user interface is divided into 10 tabs %(fig. \ref{fig:GUI_window})
-, separated into three groups: instrumental parameters, data processing and data analysis.
+The graphical user interface is divided into 10 tabs, separated into three groups: instrumental parameters, data processing and data analysis.
 The aim of this organization is to achieve a comprehensible but fluid workflow, whilst still separating each step.
 A final tab contains information about the different methods and parameters used in the workflow, as well as a tutorial on the GUI.
 
@@ -255,7 +256,7 @@ The object surface can be colour-mapped with the values of the displacement and 
 
 To further interact with the figures, (\textit{e.g.} zoom, set the colorbar range), tools were implemented that rely on \textit{Bokeh} \parencite{Bokeh}, a \textit{Python} library that transforms figures in interactive web-pages (fig. \ref{fig:BokehDetector}), that can also be displayed in Jupyter Notebook.
 
-To resume, the GUI regroups data reduction, analysis and visualisation tools in the Jupyter Notebook interface via interactive methods.
+To resume, the GUI regroups data reduction, analysis and visualisation tools in the Jupyter Notebook interface \textit{via} interactive methods.
 
 \begin{figure}[!htb]
     \centering
@@ -287,7 +288,7 @@ This option allows a quick visualisation of the probed object.
 
 \subsubsection{Data storage}
 
-Already, raw and processed data can be accessed for the BCDI technique through the \textit{.cxi} database (https://cxidb.org/) \parencite{Maia2012}, which aims at creating a single data-storing architecture/format for coherent X-ray imaging experiments.
+Already, raw and processed data can be accessed for the BCDI technique through the \textit{.cxi} database (\url{https://cxidb.org/}) \parencite{Maia2012}, which aims at creating a single data-storing architecture/format for coherent X-ray imaging experiments.
 The data input/output follows Nexus definitions \parencite{Konnecke2015} built in a CXI format hdf5 file.
 Both clarity and consistency in data formatting encourages the reproducibility of the science produced (see https://www.panosc.eu/) and guarantees the workflow.
 
@@ -299,7 +300,7 @@ Both clarity and consistency in data formatting encourages the reproducibility o
     "instrument\_1" regroups parameters associated with the instrumental setup, "data\_1" is the collected diffraction pattern.
     "image\_2" regroups the parameters associated with phase retrieval; "data\_2" is the reconstructed Bragg electronic density chosen for post-processing.
     "image\_3" regroups parameters linked to data processing, as well as the processed amplitude, phase and resulting strain. "data\_3" is a link to the processed phase of the object.
-    The file structure is displayed via \textit{JupyterHub}, a browser-based data analysis platform available on the \textit{SLURM} computer cluster for the ESRF and the \textit{GRADES} computing cluster at SOLEIL.
+    The file structure is displayed \textit{via} \textit{JupyterHub}, a browser-based data analysis platform available on the \textit{SLURM} computer cluster for the ESRF and the \textit{GRADES} computing cluster at SOLEIL.
     }
     \label{fig:TREE}
 \end{figure}
@@ -332,8 +333,8 @@ If there are no contributions, the intensity is set to NaN (Not a number).
     \label{eq:BinocularsIntensity}
     Intensity =
         \begin{cases}
-            counts \, /  \,contributions  & \text{if contributions != 0} \\
-            NaN & \text{if contributions == 0}
+            counts \, /  \,contributions  & \text{if contributions $\neq$ 0} \\
+            NaN & \text{if contributions = 0}
         \end{cases}
 \end{equation}
 
@@ -347,7 +348,7 @@ Different lattices can be used to highlight the difference of geometry between t
     \caption{
     Reciprocal space in-plane map projected on $l$.
     The large high intensity peaks are Bragg peaks from the bulk structure, the low intensity peaks are surface reconstructions.
-    The left map is computed using the a cubic unit cell, two hexagonal unit cell corresponding to the surface reconstructions' structure are drawn as diamonds.
+    The left map is computed using a cubic unit cell, two hexagonal unit cell corresponding to the surface reconstructions' structure are drawn as diamonds.
     The right image is computed using the red diamong hexagonal unit cell that corresponds to the structure of one phase of the surface reconstructions.
     }
     \label{fig:MapExampleBinoculars}
@@ -359,12 +360,12 @@ It is of utmost importance to select a thin layer to not drown the surface signa
 BINoculars also contains a sub-module (\textit{fitaid}) that allows the integration of the scattered intensity in the reciprocal space as a function of one axis.
 Usually, to study the evolution of crystal truncation rods, the data is projected either in the ($h, k, l$) or ($q_x, q_y, q_z$) frame and then integrated in a square area around a Bragg peak as a function of $l$ or $q_z$.
 The voxel size in each direction is set through a parameter, which raises a compromise between array size, resolution, and an interpolation process.
-When in the ($q_x, q_y, q_z$) space, it is possible to go as low as $0.005 \, \si{\angstrom^{-1}}$ in each direction, the limit being set by instrumental parameters such as the detector pixel size, the amount of angular scans performed, the counting time or the number of iteration per scans.
+When in the ($q_x, q_y, q_z$) space, it is possible to go as low as \qty{0.005}{\angstrom^{-1}} in each direction, the limit being set by instrumental parameters such as the detector pixel size, the amount of angular scans performed, the counting time or the number of iteration per scans.
 If the number of iteration is too low for the desired resolution, the process will yield an image with empty areas corresponding to voxels where no data could be recorded.
 This is often the case during the collection of crystal truncation rods, at high values of $l$, since the region probed by the detector becomes thinner in $l$ with every iteration \parencite{Drnec2014}.
 To avoid having to rely on an interpolation to fill these voxels, it is better to use a larger resolution when concatenating the images, and then to use the same step when integrating the data.
 
-The intensity integrated via \textit{fitaid} also contains the background signal.
+The intensity integrated \textit{via} \textit{fitaid} also contains the background signal.
 To quantitatively compare the integrated intensity with simulated structure factors, it is mandatory to subtract the background intensity from the total intensity.
 The background is calculated by taking the sum of all the values of selected background regions, around the CTR, corrected by the number of voxels in those area.
 The average background value per voxel is then subtracted to each voxel in the CTR region of interest (ROI), the structure factor $F$ can then be computed as follows:
@@ -376,9 +377,9 @@ The average background value per voxel is then subtracted to each voxel in the C
 $I_{roi}$ is the integrated intensity in the ROI, $N_{roi}$ the number of voxels in the ROI, $I_{bkg}$ the integrated background intensity and $N_{bkg}$ the number of voxels in the background.
 % This becomes more complicated when there are additional signals such as powder rings that cross the CTR at different $l$ values.
 
-A very fine resolution will result in extremely large arrays that can be difficult to manipulate on low ressources computer, for example the maps shown in fig. \ref{fig:MapExampleBinoculars} have a three dimentional shape equal to $(560, 953, 39)$ which results in $2.1 \times 10^7$ voxels in the array.
-Originally, this corresponds to the concatenation of 40 angular scans, each with 1010 steps, \textit{i.e.} containing 1010 2D detector images that have a shape equal to $(240, 560)$.
-This represents $5.5 \times 10^9$ pixels to process together to create such in-plane maps.
+A very fine resolution will result in extremely large arrays that can be difficult to manipulate on low ressources computer, for example the maps shown in fig. \ref{fig:MapExampleBinoculars} have a three dimentional shape equal to (\numproduct{560 x 953 x 39}) which results in \num{2.1e7} voxels in the array.
+Originally, this corresponds to the concatenation of 40 angular scans, each with 1010 steps, \textit{i.e.} containing 1010 2D detector images that have a shape equal to (\numproduct{240 x 560}).
+This represents \num{5.5e9} pixels to process together to create such in-plane maps.
 High performance computing clusters are therefore needed for the reduction of surface x-ray diffraction data with BINoculars, the data analysis is performed in a second step with programs such as ROD \parencite{Vlieg2000}.
 
 \subsection{ROD} \label{sec:ROD}
@@ -390,8 +391,8 @@ On the other hand, skipping areas of the reciprocal space could lead to loss of 
 SXRD data analysis consists of finding the 3D ($\vec{a}, \vec{b}$) surface unit cell structure from in-plane maps and crystal truncation rods by comparing the position and intensity of Bragg peaks with simulated peaks.
 For high symmetry structures, a small portion of the reciprocal space can sometimes be sufficient to have a final solution.
 
-In a second step, it is possible to refine the position of each atom in the unit cell to take into account possible strain in $\vec{c}$ that will have a significant effect in the shape of the crystal truncation rods.
-The structure in $\vec{c}$ is refined by computing the shape of crystal truncation rods and comparing them with experimental data, the more rods were measured and the higher the extent of each rod in $l$, the more accurate the final structure.
+In a second step, it is possible to refine the position of each atom in the unit cell to take into account possible strain along $\vec{c}$ that will have a significant effect in the shape of the crystal truncation rods.
+The structure along $\vec{c}$ is refined by computing the shape of crystal truncation rods and comparing them with experimental data, the more rods were measured and the higher the extent of each rod in $l$, the more accurate the final structure.
 
 ROD is a computer program written in \textit{C} \parencite{Vlieg2000} that is used both to simulate structure factors from surface structures and to refine surface structure by fitting the crystal truncation rod intensity.
 Since ROD is written in \textit{C} and does not come with a graphical user interface, alternatives have been developped such as GenX \parencite{Bjorck2007,Glavic2022} written in \textit{Python} which mostly focuses on reflectometry.
