--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -16,15 +16,15 @@ The positions and intensities of the diffraction peaks provide insights into the
     \centering
     \includegraphics[width=\textwidth]{Figures/introduction/SurfaceReconstructions.pdf}
     \caption{
-    a) Top view of the crystal surface, the last atomic layer (blue) does not have the same periodicity as the bulk layers (red).
-    b) HK plane in the reciprocal space, diffraction peaks are represented as small red and blue dots for the bulk and surface reconstruction, respectively. The bulk reciprocal lattice is represented in gray.
+    (a) Top view of the crystal surface, the last atomic layer (blue) does not have the same periodicity as the bulk layers (red).
+    (b) HK plane in the reciprocal space, diffraction peaks are represented as small red and blue dots for the bulk and surface reconstruction, respectively. The bulk reciprocal lattice is represented in gray.
     }
     \label{fig:SurfaceReconstructions}
 \end{figure}
 
 An example of surface reconstructions is given in fig. \ref{fig:SurfaceReconstructions} where the latest atomic layer (blue) does not have the same periodicity as the bulk layers (red).
 This phenomenom gives rise to additional Bragg peaks at positions defined by how the periodicity of the reconstruction relates to the periodicity of the bulk structure in the $\vec{a}$ and $\vec{b}$ directions.
-In this example, the surface reconstructions can be described by the (2, 4) matrix, that quantifies the relation between the surface reconstuction unit vectors ($\vec{a}_r, \vec{b}_r$) and the bulk unit vectors ($\vec{a}, \vec{b}$).
+In this example, the surface reconstructions can be described by the (\numproduct{2 x 4}) matrix, that quantifies the relation between the surface reconstuction unit vectors ($\vec{a}_r, \vec{b}_r$) and the bulk unit vectors ($\vec{a}, \vec{b}$).
 
 \subsection{Crystal truncation rods} \label{sec:CTR}
 
@@ -38,7 +38,7 @@ In this example, the surface reconstructions can be described by the (2, 4) matr
     \label{fig:CTRConvolution}
 \end{figure}
 
-It was shown in sec. \ref{sec:LatticeFactor} that the Lattice factor is equivalent to the Fourier transform of the crystal shape.
+It was shown in sec. \ref{sec:LatticeFactor} that the lattice factor is equivalent to the Fourier transform of the crystal shape.
 For infinitely large crystals, the lattice factor converges towards a three dimensional Dirac peak.
 When working with large single crystals for surface x-ray diffraction, the samples are considered to be infinitely large in the $\vec{a}, \vec{b}$ directions and \textit{semi-infinitely} large in the $\vec{c}$ direction, creating an infinitely large flat surface.
 In the real space, this can be mathematically described by the multiplication of the crystal lattice and a step-function as illustrated in fig. \ref{fig:CTRConvolution}.
@@ -80,7 +80,7 @@ This region, in which the surface structural information in contained, is accure
 To be able to analyze CTRs, it is crucial to be able to obtain a good signal to noise ratio when measuring the anti-Bragg since the intensity difference with the Bragg peak can reach 8 orders of magnitude \parencite{Fadenberger2010InSO}.
 This can become difficult when the surface is roughened during the creation of surface layers (such as oxide growth), phase transitions, or due to the adsorption of molecules during catalysis (cite).
 
-The effect of roughness is illustrated in fig. \ref{fig:CTRSimulation}, the simple $\beta$ model is used to describe surface roughness in which the $n$-surface layer (n increases towards the surface) is defined as occupying an area equivalent to $\beta^n \times A_{bulk}$ where $A_{bulk}$ is the bulk surface area \parencite{Robinson1986}.
+The effect of roughness is illustrated in fig. \ref{fig:CTRSimulation}, the simple $\beta$ model is used to describe surface roughness in which the $n$-surface layer (\textit{n} increases towards the surface) is defined as occupying an area equivalent to $\beta^n \times A_{bulk}$ where $A_{bulk}$ is the bulk surface area \parencite{Robinson1986}.
 This model only serves to describe the roughness of the bulk structure and does not function to describe the roughness of additional surface structures in which case more complex models can be used (sec. SXRD Pt 100).
 
 In surface x-ray diffraction, strain is defined with respect to the bulk unit cell lattice parameters.
@@ -97,21 +97,21 @@ To resume, analysing the scattered signal as a function of $l$ (out-of-plane mea
     \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereInPlane3D.pdf}
     \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereOutOfPlane3D.pdf}
     \caption{
-    Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satify the Laue condition.
+    Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satisfy the Laue condition.
     The node of the reciprocal lattice that satisfies the Laue condition is in red.
     For simplicity, only part of the reciprocal lattice is represented.
-    (a) In-plane measurement ([h, k, l] = [0, 1, 0]), the sample is rotated in-plane by an angle $\omega$.
+    (a) In-plane measurement ([h, k, l] = [0, 1, 0]), the sample is rotated in-plane by an angle $\omega$ equal to the Bragg angle.
     The detector must be at an in-plane angle $\gamma=2\omega$ to detect the scattered x-rays.
     (b) Out-of-plane measurement for crystal truncation rods, the sample is rotated in-plane by an angle $\omega$ so that the (0, 1, L) CTR is measured \textit{while} keeping the incident angle at low values.
-    Here the [0, 1, 1] node is on the Ewald sphere, both detector angles must be rotated to be have the detector in the direction of the scattered x-rays.
+    Here the [0, 1, 1] node is on the Ewald sphere, both detector angles must be rotated to have the detector in the direction of the scattered x-rays.
     Only the (0, 1, L) CTR is represented for simplicity.
     }
     \label{fig:EwaldSphere}
 \end{figure}
 
-Visualising how the measurements of scattered x-rays is performed with a diffractometer can quickly become complicated in three dimensions.
+Visualising how the measurements of the scattered x-rays is performed with a diffractometer can quickly become complicated in three dimensions.
 The Ewald sphere is a concept used in crystallography to visualize and interpret the diffraction of x-rays by a single crystal.
-It is a geometric construction that represents the reciprocal space associated with the crystal lattice, centered at the origin of reciprocal space and with a radius equal to the magnitude of the wavevector $\vec{k}_i$.
+It is a geometric construction that represents the reciprocal space associated with the crystal lattice, centered at the origin of reciprocal space and with a radius equal to the magnitude of the incident wavevector $\vec{k}_i$.
 
 The scattering vector $\vec{q}$ is determined by the incident and diffracted wavevectors and represents the difference between them (eq. \ref{eq:Q}).
 The Laue condition for a particular reflection is satisfied when the scattering vector lies on the surface of the Ewald sphere (fig. \ref{fig:EwaldSphere}), in other words, when the scattering vector corresponds to a point of intersection between the Ewald sphere and the reciprocal lattice points.
@@ -120,10 +120,11 @@ The Laue condition for a particular reflection is satisfied when the scattering 
     \centering
     \includegraphics[width=0.8\textwidth]{Figures/sixs/diffractometer.png}
     \caption{
-    2+3 diffractometer used at SixS. Figure adapted from \cite{Schleputz2011}.
-    The angle $\omega$ is always the in-plane rotation of the samplethe out-of-plane angular rotation is performed with $\beta$ in the horizontal configuration, $\mu$ is used in the vertical configuration.
-    Likewise, if $\gamma$ and $\delta$ are respectively the in-plane and out-of-plane detector angles in the horizontal configuration, they switch in the vertical configuration since the "plane" is defined as parallel the sample surface.
-    The $u$ and $v$ angles are in reality pseudo-angles created by moving the position of the sample with the goniometer, they are usually used to correct a possible tilt of the sample so that its surface lies perfectly in the ($\vec{x}, \vec{y}$) plane.
+    2+3 diffractometer used at SixS.
+    Figure adapted from \cite{Schleputz2011}.
+    The angle $\omega$ is always the in-plane rotation of the sample, the out-of-plane angular rotation is performed with $\beta$ in the horizontal configuration, $\mu$ is used in the vertical configuration.
+    Likewise, if $\gamma$ and $\delta$ are respectively the in-plane and out-of-plane detector angles in the horizontal configuration, they switch in the vertical configuration since the "plane" is defined as parallel to the sample surface.
+    The $u$ and $v$ angles are pseudo-angles used to move the position of the sample with the goniometer, they are usually used to correct a possible tilt of the sample so that its surface lies perfectly in the ($\vec{x}, \vec{y}$) plane.
     }
     \label{fig:Diffractometer}
 \end{figure}
@@ -132,12 +133,13 @@ The Ewald sphere is represented in fig. \ref{fig:EwaldSphere} to highlight how t
 Let us take the example of a diffractometer in a horizontal setup (fig. \ref{fig:Diffractometer}), $\omega$ and $\beta$ (rotation around $\vec{x}$ of the entire setup) are respectively the in-plane and out-of-plane rotation angles of the sample when $\gamma$ and $\delta$ are the in-plane and out-of-plane rotation angles of the detector.
 The rotation of the reciprocal space associated to the sample is achieved by rotating the sample to satisfy the Laue condition, the detection of the scattered x-rays by the detector is then attained by placing the detector in the direction of the scattering wavevector $\vec{k}_f$.
 
-For in-plane measurements, the Laue condition is fulfilled simply by rotating the sample with the in-plane angle $\omega$, the detector in-plane angle $\gamma$ must then be equal to $\gamma = 2 \omega$ to measure the scattered x-rays (fig. \ref{fig:EwaldSphere} - a).
+For in-plane measurements, the Laue condition is fulfilled simply by rotating the in-plane sample angle $\omega$ to the Bragg angle.
+The detector in-plane angle $\gamma$ must then be equal to $\gamma = 2 \omega$ to measure the scattered x-rays (fig. \ref{fig:EwaldSphere} - a).
 The incident angle between $\vec{k}_i$ and the sample must be kept to low values for reason that were explained earlier.
 In the case of out-of-plane measurements, this brings some important constraints about the experiment geometry.
 For example, the $(0, 0, L)$ crystal truncation rod becomes impossible to measure, for other rods (e.g. $(0, 1, L)$, fig. \ref{fig:EwaldSphere} - b), the sample must be rotated in plane so that the top of the Ewald sphere intersect the rod in the reciprocal space \parencite{Vlieg1997, Schlepütz2005}.
 
-As one can imagine from fig. \ref{fig:EwaldSphere} - b, there is a maximum value $l_{max}$ that can be reached until the radius of the Ewald sphere becomes too low to ever intersect the rod in the reciprocal space, which depends on the incoming photon wavelength and on the crystal lattice.
+As one can imagine from fig. \ref{fig:EwaldSphere} - b, there is a maximum value $l_{max}$ that can be reached until the radius of the Ewald sphere becomes too low to ever intersects the rod in the reciprocal space, which depends on the incoming photon wavelength and on the crystal lattice.
 Furthermore, if for low $l$ values the detector is in the vertical plane, for high $l$ values the detector is almost parallel to the sample which limits the sampling of the reciprocal space.
 These experimental limitations are at the origin of how far in $l$ the CTR can be measured, details about the experimental limitations and corrections factor for the measurement of crystal truncation rods can be found in \cite{Vlieg1997, Drnec2014}.
 High-energy surface x-ray diffraction \parencite{Gustafson2014, Harlow2020, Hejral2021} has the potential to counter that limitation since the radius of the Ewald sphere increases, which simplifies the experimental setup.
@@ -153,10 +155,10 @@ $\Phi$ is the incoming photon flux, $P$ the polarization factor, $F(\vec{q})$ th
 
 The last term in eq. \ref{eq:ScatteredIntensity} is also called the Lorentz factor and is related to how the scattered intensity is integrated around the Bragg peak due to the distortion of the intensity distribution in the angular space.
 The Lorentz factor changes depending on how the data integration is performed \parencite{Robach2000, Drnec2014}.
-Therefore, it is best to switch first from angular-space to q-space to avoid this correction, this is performed via the use of programs such as BINoculars \parencite{Roobol2015}.
+Therefore, it is best to switch first from angular-space to q-space to avoid this correction, this is performed \textit{via} the use of programs such as BINoculars \parencite{Roobol2015}.
 
-Understanding the dependance of the scattered intensity on the experimental parameters is extremely important when comparing experimental data with simulated structure factors.
-If the square-root of the integrated intensities is proportionnal to the structure factor modulus, the intensity must be corrected beforehand for the polarization factor, especially when comparing different CTR.
+Understanding the dependence of the scattered intensity on the experimental parameters is extremely important when comparing experimental data with simulated structure factors.
+If the square-root of the integrated intensities is proportionnal to the structure factor modulus, the intensity must be corrected beforehand for the polarization factor, especially when comparing different crystal truncation rods.
 Moreover, in the case of crystals that are larger than the beam, illumination effects must be considered since the scattering volume will depend on the incident angle between $\vec{k}_i$ and the surface plane.
 
 \subsection{X-ray reflectometry}\label{sec:XRR}
@@ -174,10 +176,10 @@ This kind of measurement is called \textit{specular} measurement, for which the 
     \label{fig:EwaldSphereSpecular}
 \end{figure}
 
-A description of the theory behind X-ray reflectometry which stems from deriving the interaction betwenn the incident, reflected, and transmitted plane waves at each interface can be found in several textbooks \parencite{Willmott}.
+A description of the theory behind X-ray reflectometry which stems from deriving the interaction between the incident, reflected, and transmitted plane waves at each interface can be found in several textbooks \parencite{Willmott}.
 To resume, the measured intensity $R$ is equal to the square of the reflectivity amplitude $R=|r|^2$.
 After the critical angle $\alpha_c$ (sec. \ref{sec:RefractionReflectionAbsorption}), the intensity decreases as a function of the inverse fourth power of the incident angle, and is proportionnal to the square of the electronic density.
-A rough surface will lead to an additionnal exponential decrease in the intensity after the critical angle when the formation of a new layer will lead to interferences between the waves reflected on both surfaces which will result in the so called \textit{Kiessig} fringes, of width proportionnal to the thickness of the new layer.
+A rough surface will lead to an additionnal exponential decrease in the intensity after the critical angle when the formation of a new layer will lead to interferences between the waves reflected on both surfaces which will result in the so called \textit{Kiessig} fringes, of width proportional to the thickness of the new layer.
 
 Information about the formation of new surface layers as well as the roughness and thickness of each layer can be extracted by fitting a model to the scattered intensity.
 The technique can easily be used together with surface x-ray diffraction since it does not require a change of instrumental setup, and brings complementary information about the average roughness and thickness of surface layers.
