--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -2,7 +2,7 @@
 
 \subsection{Synchrotron radiation}
 
-SOLEIL (Source Optimisée d’Énergie Intermédiaire du LURE (Laboratoire pour l’Utilisation du Rayonnement Électromagnétique)) is a 3rd generation synchrotron source facility build in 2006 and localized near Paris, France, which operates at an electron energy of $2.75 \, GeV$ with a storage ring diameter of $354 \, m$.
+SOLEIL (Source Optimisée d’Énergie Intermédiaire du LURE (Laboratoire pour l’Utilisation du Rayonnement Électromagnétique)) is a $3^{rd}$ generation synchrotron source facility build in 2006 and localized near Paris, France, which operates at an electron energy of \qty{2.75}{\GeV} with a storage ring diameter of \qty{354}{\m}.
 
 \begin{figure}[!htb]
     \centering
@@ -43,14 +43,14 @@ SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedi
     \label{fig:SixSBeamline}
 \end{figure}
 
-The beamline operates with a $U_{20}$ undulator situated before the front-end (shutter) which delivers a horizontally polarized beam characterized by its horizontal and vertical full-width at half maximum (FWHM), respectively $\sigma_H = 913.7 \, \mu m$ and $\sigma_V = 19.1 \, \mu m$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = 14.5 \, \mu rad$ and $\Delta\theta_V = 4.61 \, \mu rad$.
+The beamline operates with a $U_{20}$ undulator situated before the front-end (shutter) which delivers a horizontally polarized beam characterized by its horizontal and vertical full-width at half maximum (FWHM), respectively $\sigma_H = \qty{913.7}{\um}$ and $\sigma_V = \qty{19.1}{\um}$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = \qty{14.5}{\micro\radian}$ and $\Delta\theta_V = \qty{4.61}{\micro\radian}$.
 The beam is originally much more focused in the vertical direction.
 
-An absorber and diaphragm are placed after the undulator to cut any parasitic signal from the source, a double crystal monochromator (DCM) of silicium (111) allows the selection of a monochromatic beam of thin bandwidth $\Delta \lambda$ between $4$ and $20 \, keV$ after receiving the white beam.
-The first crystal is cooled by liquid nitrogen due to the high intensity of the white beam and produces harmonics depending on the incident angle of the beam through diffraction (Bragg law, eq. \ref{eq:Bragglaw}), only the first harmonic is selected with the second crystal.
+An absorber and diaphragm are placed after the undulator to cut any parasitic signal from the source, a double crystal monochromator (DCM) of silicium (111) allows the selection of a monochromatic beam of thin bandwidth $\Delta \lambda$ in the range of \qtyrange{4}{20}{\keV} after receiving the white beam.
+The first crystal is cooled by liquid nitrogen due to the high intensity of the white beam and produces harmonics depending on the incident angle of the beam through diffraction (Bragg's law, eq. \ref{eq:Bragglaw}), only the first harmonic is selected with the second crystal.
 Primary slits are placed just before the DCM, to select a homogeneous portion of the beam to work with to avoid fluctuations in the beam intensity.
 Secondary slits are placed just after the DCM to clean the signal after the monochromator, the vertical focus of the beam is then handled by a pair of mirrors, one of which is slightly curved.
-After the focusing mirrors are the attenuators that limit the intensity of the incident beam (e.g. when working in the direct geometry), followed by the first experimental end-station, the multi-environment diffractometer, where the focused beam is approximately large by $60 \, \mu m$ vertically and $1500 \, \mu m$ horizontally.
+After the focusing mirrors are the attenuators that limit the intensity of the incident beam (\textit{e.g.} when working in the direct geometry), followed by the first experimental end-station, the multi-environment diffractometer, where the focused beam is approximately large by \qty{60}{\um} vertically and \qty{1500}{\um} horizontally.
 The distance between each element is recapitulated in tab. \ref{tab:DistanceSixS} and a sketch of the beamline is illustrated in fig. \ref{fig:SixSBeamline}.
 The second experimental hutch, mainly used for ultra-high vacuum experiments, was not used in the frame of this thesis.
 
@@ -62,11 +62,11 @@ The second experimental hutch, mainly used for ultra-high vacuum experiments, wa
 	$U_{20}$ & Diaphragm & Ring    & Primary     & DCM         & Secondary       & Foc.      & Plan.     & Focusing &  MED \\
 	         &           & wall    & slits       & Si (111)    & slits           & mirror    & mirror    & optics        &  \\
  	\midrule
- 	$0 \, m$ &$11.7 \, m$&$15 \, m$& $16.7 \, m$ & $18.8 \, m$ &$\approx 19 \, m$&$24.5 \, m$&$25.5 \, m$&$\approx 30.5 \,  m$ & $31 \, m$
+ 	\qty{0}{\m}&\qty{11.7}{\m}&\qty{15}{\m}&\qty{16.7}{\m}&\qty{18.8}{\m}&\qty{\approx 19}{\m}&\qty{24.5}{\m}&\qty{25.5}{\m}&\qty{\approx 30.5}{\m}&\qty{31}{\m}
 	\end{tabular}
     }
 	\caption{
-		Distance between each main element that allow the focusing of a monochromatic beam on the multi environment diffractometer (MED) sample stage at SixS.
+		Distance between each main element that allows the focusing of a monochromatic beam on the multi environment diffractometer (MED) sample stage at SixS.
 	}
     \label{tab:DistanceSixS}
 \end{table}
@@ -75,19 +75,21 @@ The second experimental hutch, mainly used for ultra-high vacuum experiments, wa
 
 The multi-environment diffractometer (MED) end-station at SixS can be used in either a vertical or horizontal configuration, and can accomodate a large variety of experimental chambers around the sample stage.
 
-Situated at a distance $R = 31 \, m$ from the source, we can compute the transverse coherence length of the beam at the sample stage when working with an energy of $8.5 \, keV$ following eq. \ref{eq:TransverseCoL}.
+Situated at a distance $R = \qty{31}{\m}$ from the source, we can compute the transverse coherence length of the beam at the sample stage when working with an energy of \qty{8.5}{\keV} following eq. \ref{eq:TransverseCoL}.
 For a Gaussian distribution, the FWHM is related to the standard deviation $\sigma$ by the relation $FWHM = 2\sqrt{2 ln (2) } \sigma$.
-We obtain for the transverse coherent lengths $L_{T,H} = 3.3 \, \mu m$, and $L_{T,V} = 157.3 \, \mu m$.
-The longitudinal coherence length can be computed from eq. \ref{eq:LongitudinalCoL}, the ratio $\lambda/\Delta\lambda$ approximately equal to $1\times10^{-4} \, keV$ at the energy of $8.5 \, keV$ gives $L_L = 729 \, nm$.
+We obtain for the transverse coherent lengths $L_{T,H} = \qty{3.3}{\um}$, and $L_{T,V} = \qty{157.3}{\um}$.
+TO DO DOUBLE CHECK VALUES
+
+The longitudinal coherence length can be computed from eq. \ref{eq:LongitudinalCoL}, the ratio $\lambda/\Delta\lambda$ approximately equal to \qty{e-4}{\keV} at the energy of \qty{8.5}{\keV} gives $L_L = \qty{729}{\nm}$.
 These values corresponds to perfect coherent lengths without taking into account any imperfection in the beamline elements (monochromator, focusing mirrors) that can result in increasing the virtual source size and decreasing the transverse coherence lengths \parencite{vincentjacques2010}.
 
 When in a SXRD experimental configuration, the beam is focused with the mirrors.
 However, when in a BCDI experimental configuration, the mirrors are removed from the optical path since the focus of the beam is handled by specific focusing optics.
-The secondary slits, which are wide open during surface x-ray diffraction experiment, are closed to $100 \, \mu m$ vertically and horizontally, acting as a secondary source during Bragg coherent diffraction imaging experiments and reducing the effective size of the source seen by the focusing optics.
+The secondary slits, which are wide open during surface x-ray diffraction experiment, are closed to \qty{100}{\um} vertically and horizontally, acting as a secondary source during Bragg coherent diffraction imaging experiments and reducing the effective size of the source seen by the focusing optics.
 
 Finally, so called \textit{coherence} slits are placed just before the sample to select a more fine homogeneous portion of the beam that will impinge on focusing refractive lenses called Fresnel zone plates (FZP).
 The use of Fresnel zone plates, that preserve the coherent wavefront, together with coherence slits has been proven to increase the coherent flux \parencite{Schroer2008, diaz_coherent_2009, Mastropietro2011}.
-They are used together with an order-selecting aperture (OSA) and a beamstop that block the direct beam and the higher diffraction orders from the FZP (fig. \ref{fig:OpticalSetup}).
+They are used together with an order-sorting aperture (OSA) and a beamstop that block the direct beam and the higher diffraction orders from the FZP (fig. \ref{fig:OpticalSetup}).
 Since the coherence slits also have the counter effect of decreasing the total photon flux on the sample, their width is subject to a compromise to increase the coherent flux on the sample.
 
 \begin{figure}[!htb]
@@ -95,6 +97,7 @@ Since the coherence slits also have the counter effect of decreasing the total p
     \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/OpticalSetup.png}
     \caption{
     	Focusing optics used for Bragg coherent diffraction imaging at the MED end-station, increasing the coherent flux on the sample.
+        $f$ stands for focal distance and $\lambda$ is the wavelength of the incoming beam. (REMOVE l ?)
     }
     \label{fig:OpticalSetup}
 \end{figure}
@@ -103,7 +106,7 @@ Since the coherence slits also have the counter effect of decreasing the total p
     \centering
 	\begin{tabular}{l|l|l|l|l}
 	     & Beam stop & FZP & OSA & Beam\\ \hfill
-	    Diameter & $80 \, \mu m$ & $300 \, \mu m$ & $70 \, \mu m$ & $\approx 1 \, \mu m$\\
+	    Diameter & \qty{80}{\um} & \qty{300}{\um} & \qty{70}{\um} & \qty{\approx 1}{\um}\\
 	\end{tabular}
 	\caption{
 	Diameter of the coherence focusing optics used to increase the coherent flux on the sample.
@@ -128,7 +131,7 @@ A catalysis reactor is mounted on the sample stage of the MED for the study of c
 This reactor is used for the study of heterogeneous catalysis \parencite{VanRijn2010, Resta2020a} at ambient pressure with surface x-ray diffraction and includes an ion gun for the cleaning of the surface by sputtering.
 Sputtering is a process in which atoms or ions from a solid target material are ejected or "sputtered" from the surface of the target due to the impact of high-energy particles.
 The samples are prepared \textit{ex-situ}, introduced in the reactor and cleaned by sputtering before the experiment.
-It is also possible to heat the sample up to 900°C (at low pressures) for an extended period of time to anneal the sample after sputtering.
+It is also possible to heat the sample up to \qty{900}{\degreeCelsius} (at low pressures) for an extended period of time to anneal the sample after sputtering.
 
 \begin{figure}[!htb]
     \centering
@@ -136,12 +139,15 @@ It is also possible to heat the sample up to 900°C (at low pressures) for an ex
     \caption{
         Sample holder used for the XCAT catalysis reactor.
         The V-seal seals the reactor atmosphere from the outside when the reactor dome is fixed.
+        TRY TO FIX WORDS, MAYBE TICKZ ?
     }
     \label{fig:SampleHolder}
 \end{figure}
 
-The sample holder (fig. \ref{fig:SampleHolder}) consists of a graphite heating element covered in boron nitride fixed by two conductive screws used to control the heater power circuit, in a thick ($\approx 1 \, cm$) and round PEEK slab.
-The smooth end of the screws coming out on the other side of the PEEK slab are contact pins fixing the sample holder to the reactor by going through tight contact sockets, this design facilitates the quick setting and removal of the sample holder as well as a stable setup both horizontally and vertically.
+The sample holder (fig. \ref{fig:SampleHolder}) consists of a graphite heating element covered in boron nitride fixed by two conductive screws used to control the heater power circuit, in a thick (\qty{\approx 1}{\cm}) and round PEEK slab.
+The protruding ends of the screws on the opposite side of the PEEK slab serve as contact pins.
+These pins securely fasten the sample holder to the reactor by engaging with snug contact sockets.
+This design not only enables swift attachment and detachment of the sample holder but also ensures a robust setup in both horizontal and vertical orientations.
 The sample is then placed on top of the sample holder and set in place by a wire.
 All the materials used in the reactor were carefully chosen as not catalytically active.
 For example, tantalum parts (screws and wire) are used in the case of catalytic reaction, whereas molybdenum parts are used when specifically probing hydrogenation reactions, a boron nitride paste additionally covers the screws and wires used to fix the sample holder and the sample.
@@ -161,13 +167,13 @@ The temperature of the sample is controlled by a type C thermocouple.
 
 The gas composition inside the reactor is tuned by setting the flow for each gas in standard cubic centimeters per minute (SCCM).
 The inlet and outlet of the gases in the reactor volume are through holes in the PEEK slab that are set just below the sample holder.
-The standard supported gases are argon ($Ar$), oxygen ($O_2$), nitrogen oxide ($NO$), carbon monoxide ($CO$) and hydrogen ($H_2$).
+The standard supported gases are argon (\argon), oxygen (\dioxygen), nitrogen oxide (\nitricoxide), carbon monoxide (\ce{CO}) and hydrogen (\ce{H_2}).
 It is possible to change the gases used by computing the correct conversion factor for a mass flow controller, each one originally set to work with a specific gas.
-For example, the bottle of $H_2$ was replaced by a bottle of ammonia ($NH_3$) during the experiments involving the catalytic oxidation of ammonia.
-Moreover, the pressure inside the volume of the reactor can be controlled by a pressure controller, from $100 \, m\si{bar}$ to $1200 \, m\si{bar}$ (fig. \ref{fig:GasSupplySystem}), in a small volume ($\approx 10 mL$), under batch or constant flow conditions.
+For example, the bottle of \ce{H_2} was replaced by a bottle of ammonia (\ammonia) during the experiments involving the catalytic oxidation of ammonia.
+Moreover, the pressure inside the volume of the reactor can be controlled by a pressure controller, from \qtyrange{100}{1200}{\milli\bar} (fig. \ref{fig:GasSupplySystem}), in a small volume (\qty{\approx 10}{\ml}), under batch or constant flow conditions.
 
 Finally, the evolution of the product and reactant pressure during the catalytic reaction is probed by a residual gas analyser (RGA) which is connected to a leak from the reactor outlet (fig. \ref{fig:GasSupplySystem}).
-The leak pressure is usually in the range of $1e^{-6} \, \si{bar}$ and the assumption is made that the partial pressure of each mass detected by the RGA after the leak is equal to the partial pressure in the reactor multiplied by the same constant for all masses.
+The leak pressure is usually in the range of \qty{e-6}{\bar} and the assumption is made that the partial pressure of each mass detected by the RGA after the leak is equal to the partial pressure in the reactor multiplied by the same constant for all masses.
 
 Overall, this experimental setup allows the exploration of a large, multi-dimentionnal parameter space during heterogeneous catalysis experiments connecting reaction kinetics and surface structure.
 
@@ -176,7 +182,7 @@ Overall, this experimental setup allows the exploration of a large, multi-diment
     \includegraphics[trim=75 50 100 50, clip, width=\textwidth]{/home/david/Documents/PhD/Figures/sixs/GasSupplySystem.pdf}
     \caption{
     	Gas supply system used at SixS together with the multi-environment diffractometer (MED) for the high pressure surface diffraction reactor.
-    	The mixing of reacting gases is performed before the reactor (MIX), and Argon is used as a carrier gas (MRS).
+    	The mixing of reacting gases is performed before the reactor (MIX), and argon is used as a carrier gas (MRS).
     	The leak to the RGA is represented as a side circuit from the reactor outlet.
     	Copyright by Leiden Probe Microscopy (\url{https://leidenprobemicroscopy.com}).
     }
@@ -191,10 +197,10 @@ The measurement process for the collection of the scattered intensity is detaile
 Since this reactor was designed for SXRD together with a 6-circle diffractometer, the entire surface of the sample is accessible during the experiment which allows the full access to the reciprocal space to probe any particular symmetry, limited only by the extent of the Ewald sphere (\textit{i.e.} a maximum extent in $\vec{q}$).
 
 Different detectors can be accomodated on the diffractometer arm.
-On one hand, the MERLIN \parencite{BEWLEY20061029} combines a small pixel size ($55 \, \mu m$) with a large array $(512, 512)$, few gaps, and a large dynamic counting range, similar to the MAXIPIX detector \parencite{ponchut_maxipix_2011} which was first used for coherence experiments on the beamline \parencite{Schavkan2013, Li2020}.
+On one hand, the MERLIN \parencite{BEWLEY20061029} combines a small pixel size (\qty{55}{\um}) with a large array (\numproduct{512 x 512} pixels), few gaps, and a large dynamic counting range, similar to the MAXIPIX detector \parencite{ponchut_maxipix_2011} which was first used for coherence experiments on the beamline \parencite{Schavkan2013, Li2020}.
 For example, the pixel size is of main importance when computing the oversampling requirements (sec. \ref{sec:PhaseRetrieval}).
 
-On the other hand, the XPAD detector \parencite{Basolo2005, Dawiec_2016} is used for surface x-ray diffraction experiments, its pixel size is equal to $130 \, \mu m$.
-Different chips can be used that change the array size, respectively  $(540, 130)$ for the XPAD70 and $(540, 260)$ for the XPAD140.
-The area covered by the detector is larger than with the MERLIN, but the main perks of the XPAD are it's high dynamic range and it's highly programmable interface \parencite{Fertey2013} which can be programmed to work with automatic attenuators, crucial in SXRD when navigating between bulk and surface scattered signals .
+On the other hand, the XPAD detector \parencite{Basolo2005, Dawiec_2016} is used for surface x-ray diffraction experiments, its pixel size is equal to \qty{130}{\um}.
+Different chips can be used that change the array size, respectively (\numproduct{540 x 130}) for the XPAD70 and (\numproduct{540 x 260}) for the XPAD140.
+The area covered by the detector is larger than with the MERLIN, but the main advantages of the XPAD are its high dynamic range and highly programmable interface \parencite{Fertey2013} which can be programmed to work with automatic attenuators, crucial in SXRD when navigating between bulk and surface scattered signals .
 The XPAD detector is usually set with its largest side along $\vec{c}$ to collect the highest range in $l$ during the measurements.
